--- a/po/da.po
+++ b/po/da.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: snapper\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-28 08:50+0100\n"
+"POT-Creation-Date: 2024-02-26 12:27+0100\n"
 "PO-Revision-Date: 2019-10-15 22:53+0000\n"
 "Last-Translator: scootergrisen <scootergrisen@gmail.com>\n"
 "Language-Team: Danish <https://l10n.opensuse.org/projects/snapper/master/da/>\n"
@@ -16,163 +16,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 3.6.1\n"
-
-msgid "\t--abbreviate\t\t\tAllow to abbreviate table columns."
-msgstr ""
-
-msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
-msgstr "\t--all-configs, -a\t\tOplist øjebliksbilleder fra alle tilgængelige konfigurationer."
-
-msgid "\t--ambit, -a ambit\t\tOperate in the specified ambit."
-msgstr ""
-
-msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshot."
-msgstr "\t--cleanup-algorithm, -c<algo>\tRyd algoritme op til øjebliksbillede."
-
-msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
-msgstr "\t--cleanup-algorithm, -c<algo>\tRyd algoritme op til øjebliksbilleder."
-
-msgid ""
-"\t--columns <columns>\t\tColumns to show separated by comma.\n"
-"\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
-"\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
-"\t\t\t\t\tpre-number, post-number, post-date, read-only."
-msgstr ""
-
-msgid ""
-"\t--columns <columns>\t\tColumns to show separated by comma.\n"
-"\t\t\t\t\tPossible columns: key, value.\n"
-"\t\t\t\t\tColumns are not selected when JSON format is used."
-msgstr ""
-
-msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
-msgstr "\t--command <kommando>\tKør kommando og opret præ- og post-øjebliksbilleder."
-
-msgid "\t--config, -c <name>\t\tSet name of config to use."
-msgstr "\t--config, -c <navn>\t\tAngiv navn på konfiguration der skal bruges."
-
-msgid "\t--csvout\t\t\tSet CSV output format."
-msgstr ""
-
-msgid "\t--debug\t\t\t\tTurn on debugging."
-msgstr ""
-
-msgid "\t--default\t\t\tSet snapshot as default snapshot."
-msgstr ""
-
-msgid "\t--description, -d <description>\tDescription for snapshot."
-msgstr "\t--description, -d <beskrivelse>\tBeskrivelse af øjebliksbillede."
-
-msgid "\t--description, -d <description>\tDescription for snapshots."
-msgstr "\t--description, -d <beskrivelse>\tBeskrivelse af øjebliksbilleder."
-
-msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
-msgstr "\t--diff-cmd <kommando>\t\tKommando som bruges til at sammenligne filer."
-
-msgid "\t--disable-used-space\t\tDisable showing used space."
-msgstr "\t--disable-used-space\t\tDeaktivér visning af brugt plads."
-
-msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
-msgstr "\t--extensions, -x <tilvalg>\tEkstra tilvalg som sendes til diff-kommandoen."
-
-msgid "\t--free-space <space>\t\tTry to make space available."
-msgstr ""
-
-#, fuzzy
-msgid "\t--from <number>\t\t\tCreate a snapshot from the specified snapshot."
-msgstr "\t--from\t\t\t\tOpret et øjebliksbillede fra det angivne øjebliksbillede."
-
-msgid "\t--fstype, -f <fstype>\t\tManually set filesystem type."
-msgstr "\t--fstype, -f <fstype>\t\tAngiv type af filsystem manuelt."
-
-msgid "\t--input, -i <file>\t\tRead files for which to undo changes from file."
-msgstr "\t--input, -i <fil>\t\tLæs filer for hvilke ændringer fra fil skal fortrydes."
-
-msgid "\t--input, -i <file>\t\tRead files to diff from file."
-msgstr "\t--input, -i <fil>\t\tLæs filer til diff fra fil."
-
-msgid "\t--iso\t\t\t\tDisplay dates and times in ISO format."
-msgstr "\t--iso\t\t\t\tVis datoer og tidspunkter i ISO-format."
-
-msgid "\t--jsonout\t\t\tSet JSON output format."
-msgstr ""
-
-msgid "\t--machine-readable <format>\tSet a machine-readable output format (csv, json)."
-msgstr ""
-
-msgid "\t--no-dbus\t\t\tOperate without DBus."
-msgstr "\t--no-dbus\t\t\tArbejd uden DBus."
-
-msgid "\t--no-headers\t\t\tNo headers for CSV output format."
-msgstr ""
-
-msgid "\t--output, -o <file>\t\tSave status to file."
-msgstr "\t--output, -o <file>\t\tGem status til fil."
-
-msgid "\t--path <path>\t\t\tCleanup all configs affecting path."
-msgstr ""
-
-msgid "\t--pre-number <number>\t\tNumber of corresponding pre snapshot."
-msgstr "\t--pre-number <nummer>\t\tAntal tilsvarende præ-øjebliksbillede."
-
-msgid "\t--print-number, -p\t\tPrint number of created snapshot."
-msgstr "\t--print-number, -p\t\tSkriv nummer for oprettet øjebliksbillede."
-
-msgid "\t--print-number, -p\t\tPrint number of second created snapshot."
-msgstr "\t--print-number, -p\t\tSkriv nummer for andet oprettet øjebliksbillede."
-
-msgid "\t--quiet, -q\t\t\tSuppress normal output."
-msgstr "\t--quiet, -q\t\t\tTilbagehold normalt output."
-
-msgid "\t--read-only\t\t\tCreate read-only snapshot."
-msgstr "\t--read-only\t\t\tOpret skrivebeskyttet øjebliksbillede."
-
-#, fuzzy
-msgid "\t--read-only\t\t\tSet snapshot read-only."
-msgstr "\t--read-only\t\t\tOpret skrivebeskyttet øjebliksbillede."
-
-msgid "\t--read-write\t\t\tCreate read-write snapshot."
-msgstr "\t--read-write\t\t\tOpret skrive-læse-øjebliksbillede."
-
-#, fuzzy
-msgid "\t--read-write\t\t\tSet snapshot read-write."
-msgstr "\t--read-write\t\t\tOpret skrive-læse-øjebliksbillede."
-
-msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
-msgstr "\t--root, -r <sti>\t\tOperer på målrod (virker kun uden DBus)."
-
-msgid "\t--separator <separator>\t\tCharacter separator for CSV output format."
-msgstr ""
-
-msgid "\t--sync, -s\t\t\tSync after deletion."
-msgstr "\t--sync, -s\t\t\tSynkroniser efter sletning."
-
-msgid "\t--table-style, -t <style>\tTable style (integer)."
-msgstr "\t--table-style, -t <stil>\tTabelstil (heltal)."
-
-msgid "\t--template, -t <name>\t\tName of config template to use."
-msgstr "\t--template, -t <name>\t\tNavn på konfigurationsskabelon der skal bruges."
-
-msgid "\t--type, -t <type>\t\tType for snapshot."
-msgstr "\t--type, -t <type>\t\tType af øjebliksbillede."
-
-msgid "\t--type, -t <type>\t\tType of snapshots to list."
-msgstr "\t--type, -t <type>\t\tType af øjebliksbilleder der skal oplistes."
-
-msgid "\t--userdata, -u <userdata>\tUserdata for snapshot."
-msgstr "\t--userdata, -u <brugerdata>\tBrugerdata for øjebliksbillede."
-
-msgid "\t--userdata, -u <userdata>\tUserdata for snapshots."
-msgstr "\t--userdata, -u <brugerdata>\tBrugerdata for øjebliksbilleder."
-
-msgid "\t--utc\t\t\t\tDisplay dates and times in UTC."
-msgstr "\t--utc\t\t\t\tVis datoer og tidspunkter i UTC."
-
-msgid "\t--verbose, -v\t\t\tIncrease verbosity."
-msgstr "\t--verbose, -v\t\t\tForøg verbositet."
-
-msgid "\t--version\t\t\tPrint version and exit."
-msgstr "\t--version\t\t\tSkriv version og afslut."
 
 msgid "\tsnapper cleanup <cleanup-algorithm>"
 msgstr "\tsnapper cleanup <oprydningsalgoritme>"
@@ -254,11 +97,9 @@ msgstr "    Tilvalg for kommandoen \"create-config\":"
 msgid "    Options for 'list' command:"
 msgstr "    Tilvalg for kommandoen \"list\":"
 
-msgid ""
-"    Options for 'list-configs' command:\n"
-"\t--columns <columns>\t\tColumns to show separated by comma.\n"
-"\t\t\t\t\tPossible columns: config, subvolume.\n"
-msgstr ""
+#, fuzzy
+msgid "    Options for 'list-configs' command:"
+msgstr "    Tilvalg for kommandoen \"create-config\":"
 
 msgid "    Options for 'modify' command:"
 msgstr "    Tilvalg for kommandoen \"modify\":"
@@ -344,6 +185,133 @@ msgstr ""
 msgid "(Snapshot %d.)"
 msgstr "(Øjebliksbillede %d.)"
 
+msgid "--abbreviate"
+msgstr ""
+
+msgid "--all-configs, -a"
+msgstr ""
+
+msgid "--ambit, -a <ambit>"
+msgstr ""
+
+#, fuzzy
+msgid "--cleanup-algorithm, -c <algo>"
+msgstr "\t--cleanup-algorithm, -c<algo>\tRyd algoritme op til øjebliksbillede."
+
+msgid "--columns <columns>"
+msgstr ""
+
+msgid "--command <command>"
+msgstr ""
+
+msgid "--config, -c <name>"
+msgstr ""
+
+msgid "--csvout"
+msgstr ""
+
+msgid "--debug"
+msgstr ""
+
+msgid "--default"
+msgstr ""
+
+#, fuzzy
+msgid "--description, -d <description>"
+msgstr "\t--description, -d <beskrivelse>\tBeskrivelse af øjebliksbillede."
+
+msgid "--diff-cmd <command>"
+msgstr ""
+
+msgid "--disable-used-space"
+msgstr ""
+
+msgid "--extensions, -x <options>"
+msgstr ""
+
+msgid "--free-space <space>"
+msgstr ""
+
+msgid "--from <number>"
+msgstr ""
+
+msgid "--fstype, -f <fstype>"
+msgstr ""
+
+msgid "--input, -i <file>"
+msgstr ""
+
+msgid "--iso"
+msgstr ""
+
+msgid "--jsonout"
+msgstr ""
+
+#, fuzzy
+msgid "--machine-readable <format>"
+msgstr "Ugyldig tabelstil %d."
+
+msgid "--no-dbus"
+msgstr ""
+
+msgid "--no-headers"
+msgstr ""
+
+#, fuzzy
+msgid "--output, -o <file>"
+msgstr "\t--output, -o <file>\t\tGem status til fil."
+
+msgid "--path <path>"
+msgstr ""
+
+msgid "--pre-number <number>"
+msgstr ""
+
+msgid "--print-number, -p"
+msgstr ""
+
+msgid "--quiet, -q"
+msgstr ""
+
+msgid "--read-only"
+msgstr ""
+
+msgid "--read-write"
+msgstr ""
+
+msgid "--root, -r <path>"
+msgstr ""
+
+msgid "--separator <separator>"
+msgstr ""
+
+msgid "--sync, -s"
+msgstr ""
+
+#, fuzzy
+msgid "--table-style, -t <style>"
+msgstr "\t--table-style, -t <stil>\tTabelstil (heltal)."
+
+msgid "--template, -t <name>"
+msgstr ""
+
+#, fuzzy
+msgid "--type, -t <type>"
+msgstr "\t--type, -t <type>\t\tType af øjebliksbillede."
+
+#, fuzzy
+msgid "--userdata, -u <userdata>"
+msgstr "\t--userdata, -u <brugerdata>\tBrugerdata for øjebliksbillede."
+
+msgid "--utc"
+msgstr ""
+
+msgid "--verbose, -v"
+msgstr ""
+
+msgid "--version"
+msgstr ""
+
 msgid "ACL error."
 msgstr "ACL-fejl."
 
@@ -351,6 +319,9 @@ msgid "Active"
 msgstr ""
 
 msgid "Active snapshot is already default snapshot."
+msgstr ""
+
+msgid "Allow to abbreviate table columns."
 msgstr ""
 
 #, c-format
@@ -379,12 +350,29 @@ msgstr ""
 msgid "Cannot do rollback since default subvolume is unknown."
 msgstr ""
 
+msgid "Character separator for CSV output format."
+msgstr ""
+
 msgid "Cleanup"
 msgstr "Oprydning"
+
+#, fuzzy
+msgid "Cleanup algorithm for snapshot."
+msgstr "\t--cleanup-algorithm, -c<algo>\tRyd algoritme op til øjebliksbillede."
+
+#, fuzzy
+msgid "Cleanup algorithm for snapshots."
+msgstr "\t--cleanup-algorithm, -c<algo>\tRyd algoritme op til øjebliksbilleder."
+
+msgid "Cleanup all configs affecting path."
+msgstr ""
 
 #, fuzzy, c-format
 msgid "Client-side plugin '%s' failed."
 msgstr "Åbning af filen \"%s\" mislykkedes."
+
+msgid "Columns to show separated by comma."
+msgstr ""
 
 msgid "Command 'cleanup' needs one arguments."
 msgstr "Kommandoen \"cleanup\" kræver et argument."
@@ -453,6 +441,10 @@ msgstr "Kommandoen \"undochange\" kræver mindst ét argument."
 msgid "Command 'xadiff' needs at least one argument."
 msgstr "Kommandoen \"xadiff\" kræver mindst ét argument."
 
+#, fuzzy
+msgid "Command used for comparing files."
+msgstr "\t--diff-cmd <kommando>\t\tKommando som bruges til at sammenligne filer."
+
 msgid "Config"
 msgstr "Konfiguration"
 
@@ -484,6 +476,18 @@ msgstr ""
 
 msgid "Could not make enough free space available."
 msgstr ""
+
+#, fuzzy
+msgid "Create a snapshot from the specified snapshot."
+msgstr "\t--from\t\t\t\tOpret et øjebliksbillede fra det angivne øjebliksbillede."
+
+#, fuzzy
+msgid "Create read-only snapshot."
+msgstr "\t--read-only\t\t\tOpret skrivebeskyttet øjebliksbillede."
+
+#, fuzzy
+msgid "Create read-write snapshot."
+msgstr "\t--read-write\t\t\tOpret skrive-læse-øjebliksbillede."
 
 #, c-format
 msgid "Creating config failed (%s)."
@@ -527,8 +531,28 @@ msgstr[1] "Sletning af øjebliksbilleder fra %s:"
 msgid "Description"
 msgstr "Beskrivelse"
 
+#, fuzzy
+msgid "Description for snapshot."
+msgstr "Beskrivelse"
+
+#, fuzzy
+msgid "Description for snapshots."
+msgstr "sammenligninger øjebliksbilleder..."
+
 msgid "Detecting filesystem type failed."
 msgstr "Detektion af filsystemtype mislykkedes."
+
+#, fuzzy
+msgid "Disable showing used space."
+msgstr "\t--disable-used-space\t\tDeaktivér visning af brugt plads."
+
+#, fuzzy
+msgid "Display dates and times in ISO format."
+msgstr "\t--iso\t\t\t\tVis datoer og tidspunkter i ISO-format."
+
+#, fuzzy
+msgid "Display dates and times in UTC."
+msgstr "\t--utc\t\t\t\tVis datoer og tidspunkter i UTC."
 
 #. TRANSLATORS: symbol for "exa" (best keep untranslated)
 msgid "E"
@@ -553,6 +577,10 @@ msgstr "Tomme brugerdata."
 #, c-format
 msgid "Error (%s)."
 msgstr "Fejl (%s)."
+
+#, fuzzy
+msgid "Extra options passed to the diff command."
+msgstr "\t--extensions, -x <tilvalg>\tEkstra tilvalg som sendes til diff-kommandoen."
 
 msgid "Failed to initialize filesystem handler."
 msgstr "Kunne ikke initialisere filsystemhåndtering."
@@ -618,6 +646,10 @@ msgstr "Identiske øjebliksbilleder."
 msgid "Illegal snapshot."
 msgstr "Ulovligt øjebliksbillede."
 
+#, fuzzy
+msgid "Increase verbosity."
+msgstr "\t--verbose, -v\t\t\tForøg verbositet."
+
 #, fuzzy, c-format
 msgid "Invalid ambit '%s'."
 msgstr "Ugyldigt øjebliksbillede \"%s\"."
@@ -625,6 +657,10 @@ msgstr "Ugyldigt øjebliksbillede \"%s\"."
 #, fuzzy, c-format
 msgid "Invalid column '%s'."
 msgstr "Ugyldigt øjebliksbillede \"%s\"."
+
+#, fuzzy
+msgid "Invalid config."
+msgstr "Ugyldige konfigurationsdata."
 
 msgid "Invalid configdata."
 msgstr "Ugyldige konfigurationsdata."
@@ -673,6 +709,10 @@ msgstr "Nøgle"
 msgid "KiB"
 msgstr "KiB"
 
+#, fuzzy
+msgid "List snapshots from all accessible configs."
+msgstr "\t--all-configs, -a\t\tOplist øjebliksbilleder fra alle tilgængelige konfigurationer."
+
 #, c-format
 msgid "Listing configs failed (%s)."
 msgstr "Oplistning af konfigurationer mislykkedes (%s)."
@@ -685,6 +725,10 @@ msgstr ""
 #, fuzzy
 msgid "MB"
 msgstr "MiB"
+
+#, fuzzy
+msgid "Manually set filesystem type."
+msgstr "\t--fstype, -f <fstype>\t\tAngiv type af filsystem manuelt."
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
 msgstr "Måske glemte du afgrænseren '..' mellem øjebliksbilledsnumrene."
@@ -711,15 +755,40 @@ msgstr "Manglende afgrænser '..' mellem øjebliksbilledsnumre."
 msgid "Missing or invalid pre-number."
 msgstr "Manglende eller ugyldigt præ-nummer."
 
+msgid "Name"
+msgstr ""
+
+#, fuzzy
+msgid "Name of config template to use."
+msgstr "\t--template, -t <name>\t\tNavn på konfigurationsskabelon der skal bruges."
+
 msgid "No command provided."
 msgstr "Ingen kommando givet."
+
+msgid "No headers for CSV output format."
+msgstr ""
 
 msgid "No permissions."
 msgstr "Ingen rettigheder."
 
+#, fuzzy
+msgid "Number of corresponding pre snapshot."
+msgstr "\t--pre-number <nummer>\t\tAntal tilsvarende præ-øjebliksbillede."
+
 #, c-format
 msgid "Opening file '%s' failed."
 msgstr "Åbning af filen \"%s\" mislykkedes."
+
+msgid "Operate in the specified ambit."
+msgstr ""
+
+#, fuzzy
+msgid "Operate on target root (works only without DBus)."
+msgstr "\t--root, -r <sti>\t\tOperer på målrod (virker kun uden DBus)."
+
+#, fuzzy
+msgid "Operate without DBus."
+msgstr "\t--no-dbus\t\t\tArbejd uden DBus."
 
 msgid "Option --from only supported for snapshots of type single."
 msgstr "Tilvalget --from understøttes kun af øjebliksbilleder af typen enkelt."
@@ -753,13 +822,41 @@ msgstr "Præ #"
 msgid "Pre Date"
 msgstr "Præ-dato"
 
+#, fuzzy
+msgid "Print number of created snapshot."
+msgstr "\t--print-number, -p\t\tSkriv nummer for oprettet øjebliksbillede."
+
+#, fuzzy
+msgid "Print number of second created snapshot."
+msgstr "\t--print-number, -p\t\tSkriv nummer for andet oprettet øjebliksbillede."
+
+#, fuzzy
+msgid "Print version and exit."
+msgstr "\t--version\t\t\tSkriv version og afslut."
+
 # error box title
 #, c-format
 msgid "Quota error (%s)."
 msgstr "Fejl i kvote (%s)."
 
+#, fuzzy
+msgid "Read files for which to undo changes from file."
+msgstr "\t--input, -i <fil>\t\tLæs filer for hvilke ændringer fra fil skal fortrydes."
+
+#, fuzzy
+msgid "Read files to diff from file."
+msgstr "\t--input, -i <fil>\t\tLæs filer til diff fra fil."
+
 msgid "Read-Only"
 msgstr ""
+
+#, fuzzy
+msgid "Run command and create pre and post snapshots."
+msgstr "\t--command <kommando>\tKør kommando og opret præ- og post-øjebliksbilleder."
+
+#, fuzzy
+msgid "Save status to file."
+msgstr "\t--output, -o <file>\t\tGem status til fil."
 
 msgid "See 'man snapper' for further instructions."
 msgstr "Se \"man snapper\" for yderligere vejledning."
@@ -767,6 +864,31 @@ msgstr "Se \"man snapper\" for yderligere vejledning."
 #, fuzzy, c-format
 msgid "Server-side plugin '%s' failed."
 msgstr "Åbning af filen \"%s\" mislykkedes."
+
+msgid "Set CSV output format."
+msgstr ""
+
+msgid "Set JSON output format."
+msgstr ""
+
+#, fuzzy
+msgid "Set a machine-readable output format (csv, json)."
+msgstr "Ugyldig tabelstil %d."
+
+#, fuzzy
+msgid "Set name of config to use."
+msgstr "\t--config, -c <navn>\t\tAngiv navn på konfiguration der skal bruges."
+
+msgid "Set snapshot as default snapshot."
+msgstr ""
+
+#, fuzzy
+msgid "Set snapshot read-only."
+msgstr "\t--read-only\t\t\tOpret skrivebeskyttet øjebliksbillede."
+
+#, fuzzy
+msgid "Set snapshot read-write."
+msgstr "\t--read-write\t\t\tOpret skrive-læse-øjebliksbillede."
 
 #, c-format
 msgid "Setting default subvolume to snapshot %d."
@@ -782,6 +904,14 @@ msgstr "Øjebliksbilledet er i brug."
 msgid "Subvolume"
 msgstr "Underdiskområde"
 
+#, fuzzy
+msgid "Suppress normal output."
+msgstr "\t--quiet, -q\t\t\tTilbagehold normalt output."
+
+#, fuzzy
+msgid "Sync after deletion."
+msgstr "\t--sync, -s\t\t\tSynkroniser efter sletning."
+
 #. TRANSLATORS: symbol for "tera" (best keep untranslated)
 msgid "T"
 msgstr ""
@@ -790,6 +920,10 @@ msgstr ""
 #, fuzzy
 msgid "TB"
 msgstr "TiB"
+
+#, fuzzy
+msgid "Table style (integer)."
+msgstr "\t--table-style, -t <stil>\tTabelstil (heltal)."
 
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr ""
@@ -807,8 +941,22 @@ msgstr "TiB"
 msgid "Try 'snapper --help' for more information."
 msgstr "Prøv \"snapper --help\" for at få mere information."
 
+msgid "Try to make space available."
+msgstr ""
+
+msgid "Turn on debugging."
+msgstr ""
+
 msgid "Type"
 msgstr "Type"
+
+#, fuzzy
+msgid "Type for snapshot."
+msgstr "Ukendt type af øjebliksbillede."
+
+#, fuzzy
+msgid "Type of snapshots to list."
+msgstr "\t--type, -t <type>\t\tType af øjebliksbilleder der skal oplistes."
 
 #, c-format
 msgid "Unknown cleanup algorithm '%s'."
@@ -859,6 +1007,14 @@ msgstr "Brugerdata \"%s\" inkluderer ikke \"=\"-tegn."
 #, c-format
 msgid "Userdata '%s' has empty key."
 msgstr "Brugerdata \"%s\" har tom nøgle."
+
+#, fuzzy
+msgid "Userdata for snapshot."
+msgstr "\t--userdata, -u <brugerdata>\tBrugerdata for øjebliksbillede."
+
+#, fuzzy
+msgid "Userdata for snapshots."
+msgstr "Identiske øjebliksbilleder."
 
 msgid "Value"
 msgstr "Værdi"
@@ -916,8 +1072,11 @@ msgstr "brug: snapper [--globale-tilvalg] <kommando> [--kommando-tilvalg] [komma
 msgid "yes"
 msgstr ""
 
-#~ msgid "Unknown type of snapshot."
-#~ msgstr "Ukendt type af øjebliksbillede."
+#~ msgid "\t--description, -d <description>\tDescription for snapshots."
+#~ msgstr "\t--description, -d <beskrivelse>\tBeskrivelse af øjebliksbilleder."
+
+#~ msgid "\t--userdata, -u <userdata>\tUserdata for snapshots."
+#~ msgstr "\t--userdata, -u <brugerdata>\tBrugerdata for øjebliksbilleder."
 
 #~ msgid "Unknown type of snapshots."
 #~ msgstr "Ukendt type af øjebliksbilleder."
@@ -943,9 +1102,6 @@ msgstr ""
 
 #~ msgid "Command failed (%s). See log for more information."
 #~ msgstr "Kommandoen mislykkedes (%s). Se loggen for at få mere information."
-
-#~ msgid "comparing snapshots..."
-#~ msgstr "sammenligninger øjebliksbilleder..."
 
 #~ msgid "done"
 #~ msgstr "udført"
