--- a/po/nb.po
+++ b/po/nb.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-28 08:50+0100\n"
+"POT-Creation-Date: 2024-02-26 12:27+0100\n"
 "PO-Revision-Date: 2013-10-04 18:20+0200\n"
 "Last-Translator: Olav Pettershagen <olpetter@bbnett.no>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.uio.no>\n"
@@ -17,167 +17,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Lokalize 1.5\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-msgid "\t--abbreviate\t\t\tAllow to abbreviate table columns."
-msgstr ""
-
-msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
-msgstr ""
-
-msgid "\t--ambit, -a ambit\t\tOperate in the specified ambit."
-msgstr ""
-
-msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshot."
-msgstr "\t--cleanup-algorithm, -c <algo>\tOppryddingsalgoritme for øyeblikksbilde."
-
-#, fuzzy
-msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
-msgstr "\t--cleanup-algorithm, -c <algo>\tOppryddingsalgoritme for øyeblikksbilde."
-
-msgid ""
-"\t--columns <columns>\t\tColumns to show separated by comma.\n"
-"\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
-"\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
-"\t\t\t\t\tpre-number, post-number, post-date, read-only."
-msgstr ""
-
-msgid ""
-"\t--columns <columns>\t\tColumns to show separated by comma.\n"
-"\t\t\t\t\tPossible columns: key, value.\n"
-"\t\t\t\t\tColumns are not selected when JSON format is used."
-msgstr ""
-
-#, fuzzy
-msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
-msgstr "\t--command <kommando>\tKjør kommandoen og opprette før- og etter-øyeblikksbilder."
-
-msgid "\t--config, -c <name>\t\tSet name of config to use."
-msgstr "\t--config, -c <navn>\t\tNavn som skal brukes i oppsettet."
-
-msgid "\t--csvout\t\t\tSet CSV output format."
-msgstr ""
-
-msgid "\t--debug\t\t\t\tTurn on debugging."
-msgstr ""
-
-msgid "\t--default\t\t\tSet snapshot as default snapshot."
-msgstr ""
-
-msgid "\t--description, -d <description>\tDescription for snapshot."
-msgstr "\t--description, -d <beskrivelse>\tBeskrivelse av øyeblikksbilde."
-
-#, fuzzy
-msgid "\t--description, -d <description>\tDescription for snapshots."
-msgstr "\t--description, -d <beskrivelse>\tBeskrivelse av øyeblikksbilde."
-
-msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
-msgstr ""
-
-#, fuzzy
-msgid "\t--disable-used-space\t\tDisable showing used space."
-msgstr "\t--disable-filters\t\tDeaktiver filtre."
-
-msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
-msgstr ""
-
-msgid "\t--free-space <space>\t\tTry to make space available."
-msgstr ""
-
-msgid "\t--from <number>\t\t\tCreate a snapshot from the specified snapshot."
-msgstr ""
-
-msgid "\t--fstype, -f <fstype>\t\tManually set filesystem type."
-msgstr "\t--fstype, -f <fstype>\t\tAngi filsystemtype manuelt."
-
-msgid "\t--input, -i <file>\t\tRead files for which to undo changes from file."
-msgstr "\t--input, -i <fil>\t\tLes filer der endringer skal angres."
-
-#, fuzzy
-msgid "\t--input, -i <file>\t\tRead files to diff from file."
-msgstr "\t--input, -i <fil>\t\tLes filer der endringer skal angres."
-
-msgid "\t--iso\t\t\t\tDisplay dates and times in ISO format."
-msgstr ""
-
-msgid "\t--jsonout\t\t\tSet JSON output format."
-msgstr ""
-
-msgid "\t--machine-readable <format>\tSet a machine-readable output format (csv, json)."
-msgstr ""
-
-msgid "\t--no-dbus\t\t\tOperate without DBus."
-msgstr "\t--no-dbus\t\t\tBruk systemet uten DBus."
-
-msgid "\t--no-headers\t\t\tNo headers for CSV output format."
-msgstr ""
-
-msgid "\t--output, -o <file>\t\tSave status to file."
-msgstr "\t--output, -o <fil>\t\tLagre status i fil."
-
-msgid "\t--path <path>\t\t\tCleanup all configs affecting path."
-msgstr ""
-
-msgid "\t--pre-number <number>\t\tNumber of corresponding pre snapshot."
-msgstr "\t--pre-number <antall>\t\tAntall samsvarende før øyeblikksbilde."
-
-msgid "\t--print-number, -p\t\tPrint number of created snapshot."
-msgstr "\t--print-number, -p\t\tVis antall opprettede øyeblikksbilder."
-
-#, fuzzy
-msgid "\t--print-number, -p\t\tPrint number of second created snapshot."
-msgstr "\t--print-number, -p\t\tVis antall opprettede øyeblikksbilder."
-
-msgid "\t--quiet, -q\t\t\tSuppress normal output."
-msgstr "\t--quiet, -q\t\t\tUndertrykk vanlig visning."
-
-msgid "\t--read-only\t\t\tCreate read-only snapshot."
-msgstr ""
-
-msgid "\t--read-only\t\t\tSet snapshot read-only."
-msgstr ""
-
-msgid "\t--read-write\t\t\tCreate read-write snapshot."
-msgstr ""
-
-msgid "\t--read-write\t\t\tSet snapshot read-write."
-msgstr ""
-
-msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
-msgstr ""
-
-msgid "\t--separator <separator>\t\tCharacter separator for CSV output format."
-msgstr ""
-
-msgid "\t--sync, -s\t\t\tSync after deletion."
-msgstr ""
-
-msgid "\t--table-style, -t <style>\tTable style (integer)."
-msgstr "\t--table-style, -t <style>\tTabellformat (heltall)."
-
-msgid "\t--template, -t <name>\t\tName of config template to use."
-msgstr "\t--template, -t <navn>\t\tNavn på oppsettmal som skal brukes."
-
-msgid "\t--type, -t <type>\t\tType for snapshot."
-msgstr "\t--type, -t <type>\t\tType øyeblikksbilde."
-
-msgid "\t--type, -t <type>\t\tType of snapshots to list."
-msgstr "\t--type, -t <type>\t\tType øyeblikksbilder som skal vises."
-
-msgid "\t--userdata, -u <userdata>\tUserdata for snapshot."
-msgstr "\t--userdata, -u <userdata>\tBrukerdata for øyeblikksbilde."
-
-#, fuzzy
-msgid "\t--userdata, -u <userdata>\tUserdata for snapshots."
-msgstr "\t--userdata, -u <userdata>\tBrukerdata for øyeblikksbilde."
-
-msgid "\t--utc\t\t\t\tDisplay dates and times in UTC."
-msgstr ""
-
-msgid "\t--verbose, -v\t\t\tIncrease verbosity."
-msgstr "\t--verbose, -v\t\t\tVis mer informasjon."
-
-msgid "\t--version\t\t\tPrint version and exit."
-msgstr "\t--version\t\t\tVis versjon og avslutt."
 
 msgid "\tsnapper cleanup <cleanup-algorithm>"
 msgstr "\tsnapper cleanup <oppryddingsalgoritme>"
@@ -263,11 +102,9 @@ msgstr "    Valg for 'create config'-kommandoen:"
 msgid "    Options for 'list' command:"
 msgstr "    Valg for 'list'-kommandoen:"
 
-msgid ""
-"    Options for 'list-configs' command:\n"
-"\t--columns <columns>\t\tColumns to show separated by comma.\n"
-"\t\t\t\t\tPossible columns: config, subvolume.\n"
-msgstr ""
+#, fuzzy
+msgid "    Options for 'list-configs' command:"
+msgstr "    Valg for 'create config'-kommandoen:"
 
 msgid "    Options for 'modify' command:"
 msgstr "    Valg for 'modify'-kommandoen:"
@@ -355,6 +192,133 @@ msgstr ""
 msgid "(Snapshot %d.)"
 msgstr "Øyeblikksbildet '%u' ikke funnet."
 
+msgid "--abbreviate"
+msgstr ""
+
+msgid "--all-configs, -a"
+msgstr ""
+
+msgid "--ambit, -a <ambit>"
+msgstr ""
+
+#, fuzzy
+msgid "--cleanup-algorithm, -c <algo>"
+msgstr "\t--cleanup-algorithm, -c <algo>\tOppryddingsalgoritme for øyeblikksbilde."
+
+msgid "--columns <columns>"
+msgstr ""
+
+msgid "--command <command>"
+msgstr ""
+
+msgid "--config, -c <name>"
+msgstr ""
+
+msgid "--csvout"
+msgstr ""
+
+msgid "--debug"
+msgstr ""
+
+msgid "--default"
+msgstr ""
+
+#, fuzzy
+msgid "--description, -d <description>"
+msgstr "\t--description, -d <beskrivelse>\tBeskrivelse av øyeblikksbilde."
+
+msgid "--diff-cmd <command>"
+msgstr ""
+
+msgid "--disable-used-space"
+msgstr ""
+
+msgid "--extensions, -x <options>"
+msgstr ""
+
+msgid "--free-space <space>"
+msgstr ""
+
+msgid "--from <number>"
+msgstr ""
+
+msgid "--fstype, -f <fstype>"
+msgstr ""
+
+msgid "--input, -i <file>"
+msgstr ""
+
+msgid "--iso"
+msgstr ""
+
+msgid "--jsonout"
+msgstr ""
+
+#, fuzzy
+msgid "--machine-readable <format>"
+msgstr "Ugyldig tabellstil %d."
+
+msgid "--no-dbus"
+msgstr ""
+
+msgid "--no-headers"
+msgstr ""
+
+#, fuzzy
+msgid "--output, -o <file>"
+msgstr "\t--output, -o <fil>\t\tLagre status i fil."
+
+msgid "--path <path>"
+msgstr ""
+
+msgid "--pre-number <number>"
+msgstr ""
+
+msgid "--print-number, -p"
+msgstr ""
+
+msgid "--quiet, -q"
+msgstr ""
+
+msgid "--read-only"
+msgstr ""
+
+msgid "--read-write"
+msgstr ""
+
+msgid "--root, -r <path>"
+msgstr ""
+
+msgid "--separator <separator>"
+msgstr ""
+
+msgid "--sync, -s"
+msgstr ""
+
+#, fuzzy
+msgid "--table-style, -t <style>"
+msgstr "\t--table-style, -t <style>\tTabellformat (heltall)."
+
+msgid "--template, -t <name>"
+msgstr ""
+
+#, fuzzy
+msgid "--type, -t <type>"
+msgstr "\t--type, -t <type>\t\tType øyeblikksbilde."
+
+#, fuzzy
+msgid "--userdata, -u <userdata>"
+msgstr "\t--userdata, -u <userdata>\tBrukerdata for øyeblikksbilde."
+
+msgid "--utc"
+msgstr ""
+
+msgid "--verbose, -v"
+msgstr ""
+
+msgid "--version"
+msgstr ""
+
 # error box title
 #, fuzzy
 msgid "ACL error."
@@ -364,6 +328,9 @@ msgid "Active"
 msgstr ""
 
 msgid "Active snapshot is already default snapshot."
+msgstr ""
+
+msgid "Allow to abbreviate table columns."
 msgstr ""
 
 #, c-format
@@ -392,12 +359,29 @@ msgstr ""
 msgid "Cannot do rollback since default subvolume is unknown."
 msgstr ""
 
+msgid "Character separator for CSV output format."
+msgstr ""
+
 msgid "Cleanup"
 msgstr "Rydde opp"
+
+#, fuzzy
+msgid "Cleanup algorithm for snapshot."
+msgstr "\t--cleanup-algorithm, -c <algo>\tOppryddingsalgoritme for øyeblikksbilde."
+
+#, fuzzy
+msgid "Cleanup algorithm for snapshots."
+msgstr "\t--cleanup-algorithm, -c <algo>\tOppryddingsalgoritme for øyeblikksbilde."
+
+msgid "Cleanup all configs affecting path."
+msgstr ""
 
 #, fuzzy, c-format
 msgid "Client-side plugin '%s' failed."
 msgstr "Filen '%s' kunne ikke åpnes."
+
+msgid "Columns to show separated by comma."
+msgstr ""
 
 msgid "Command 'cleanup' needs one arguments."
 msgstr "Kommandoen 'cleanup' trenger ett argument."
@@ -470,6 +454,9 @@ msgstr "Kommandoen 'undochange' trenger minst ett argument."
 msgid "Command 'xadiff' needs at least one argument."
 msgstr "Kommandoen «xadiff» trenger minst ett argument."
 
+msgid "Command used for comparing files."
+msgstr ""
+
 msgid "Config"
 msgstr "Oppsett"
 
@@ -501,6 +488,18 @@ msgstr ""
 
 msgid "Could not make enough free space available."
 msgstr ""
+
+#, fuzzy
+msgid "Create a snapshot from the specified snapshot."
+msgstr "Diskbilde kunne ikke opprettes."
+
+#, fuzzy
+msgid "Create read-only snapshot."
+msgstr "%s -regel støttes ikke på dette systemet.\n"
+
+#, fuzzy
+msgid "Create read-write snapshot."
+msgstr "Diskbilde kunne ikke opprettes."
 
 #, c-format
 msgid "Creating config failed (%s)."
@@ -546,8 +545,26 @@ msgstr[1] "Diskbilde kunne ikke slettes."
 msgid "Description"
 msgstr "Beskrivelse"
 
+#, fuzzy
+msgid "Description for snapshot."
+msgstr "Beskrivelse"
+
+#, fuzzy
+msgid "Description for snapshots."
+msgstr "sammenligner øyeblikksbilder..."
+
 msgid "Detecting filesystem type failed."
 msgstr "Registrering av filsystemtype mislyktes"
+
+#, fuzzy
+msgid "Disable showing used space."
+msgstr "\t--disable-filters\t\tDeaktiver filtre."
+
+msgid "Display dates and times in ISO format."
+msgstr ""
+
+msgid "Display dates and times in UTC."
+msgstr ""
 
 #. TRANSLATORS: symbol for "exa" (best keep untranslated)
 msgid "E"
@@ -573,6 +590,10 @@ msgstr "Ugyldige brukerdata."
 #, fuzzy, c-format
 msgid "Error (%s)."
 msgstr "Inn/ut-feil."
+
+#, fuzzy
+msgid "Extra options passed to the diff command."
+msgstr "    Valg for 'modify'-kommandoen:"
 
 #, fuzzy
 msgid "Failed to initialize filesystem handler."
@@ -639,6 +660,10 @@ msgstr "Identiske øyeblikksbilder."
 msgid "Illegal snapshot."
 msgstr "Ugyldig øyeblikksbilde."
 
+#, fuzzy
+msgid "Increase verbosity."
+msgstr "\t--verbose, -v\t\t\tVis mer informasjon."
+
 #, fuzzy, c-format
 msgid "Invalid ambit '%s'."
 msgstr "Ugyldig øyeblikksbilde '%s'."
@@ -646,6 +671,10 @@ msgstr "Ugyldig øyeblikksbilde '%s'."
 #, fuzzy, c-format
 msgid "Invalid column '%s'."
 msgstr "Ugyldig øyeblikksbilde '%s'."
+
+#, fuzzy
+msgid "Invalid config."
+msgstr "Ugyldige oppsettdata."
 
 msgid "Invalid configdata."
 msgstr "Ugyldige oppsettdata."
@@ -694,6 +723,9 @@ msgstr "Nøkkel"
 msgid "KiB"
 msgstr ""
 
+msgid "List snapshots from all accessible configs."
+msgstr ""
+
 #, c-format
 msgid "Listing configs failed (%s)."
 msgstr "Oppsett kunne ikke vises (%s)."
@@ -705,6 +737,10 @@ msgstr ""
 #. TRANSLATORS: symbol for "mega bytes" (best keep untranslated)
 msgid "MB"
 msgstr ""
+
+#, fuzzy
+msgid "Manually set filesystem type."
+msgstr "\t--fstype, -f <fstype>\t\tAngi filsystemtype manuelt."
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
 msgstr ""
@@ -731,15 +767,39 @@ msgstr ""
 msgid "Missing or invalid pre-number."
 msgstr "Manglende eller ugyldig før-nummer."
 
+msgid "Name"
+msgstr ""
+
+#, fuzzy
+msgid "Name of config template to use."
+msgstr "\t--template, -t <navn>\t\tNavn på oppsettmal som skal brukes."
+
 msgid "No command provided."
 msgstr "Ingen kommando gitt"
+
+msgid "No headers for CSV output format."
+msgstr ""
 
 msgid "No permissions."
 msgstr "Ikke autorisert."
 
+#, fuzzy
+msgid "Number of corresponding pre snapshot."
+msgstr "\t--pre-number <antall>\t\tAntall samsvarende før øyeblikksbilde."
+
 #, c-format
 msgid "Opening file '%s' failed."
 msgstr "Filen '%s' kunne ikke åpnes."
+
+msgid "Operate in the specified ambit."
+msgstr ""
+
+msgid "Operate on target root (works only without DBus)."
+msgstr ""
+
+#, fuzzy
+msgid "Operate without DBus."
+msgstr "\t--no-dbus\t\t\tBruk systemet uten DBus."
 
 msgid "Option --from only supported for snapshots of type single."
 msgstr ""
@@ -772,13 +832,41 @@ msgstr "Før #"
 msgid "Pre Date"
 msgstr "Før dato"
 
+#, fuzzy
+msgid "Print number of created snapshot."
+msgstr "\t--print-number, -p\t\tVis antall opprettede øyeblikksbilder."
+
+#, fuzzy
+msgid "Print number of second created snapshot."
+msgstr "\t--print-number, -p\t\tVis antall opprettede øyeblikksbilder."
+
+#, fuzzy
+msgid "Print version and exit."
+msgstr "\t--version\t\t\tVis versjon og avslutt."
+
 # error box title
 #, fuzzy, c-format
 msgid "Quota error (%s)."
 msgstr "Inn/ut-feil."
 
+#, fuzzy
+msgid "Read files for which to undo changes from file."
+msgstr "\t--input, -i <fil>\t\tLes filer der endringer skal angres."
+
+#, fuzzy
+msgid "Read files to diff from file."
+msgstr "\t--input, -i <fil>\t\tLes filer der endringer skal angres."
+
 msgid "Read-Only"
 msgstr ""
+
+#, fuzzy
+msgid "Run command and create pre and post snapshots."
+msgstr "\t--command <kommando>\tKjør kommandoen og opprette før- og etter-øyeblikksbilder."
+
+#, fuzzy
+msgid "Save status to file."
+msgstr "\t--output, -o <fil>\t\tLagre status i fil."
 
 #, fuzzy
 msgid "See 'man snapper' for further instructions."
@@ -787,6 +875,31 @@ msgstr "Forsøk 'snapper --help' for mer informasjon."
 #, fuzzy, c-format
 msgid "Server-side plugin '%s' failed."
 msgstr "Filen '%s' kunne ikke åpnes."
+
+msgid "Set CSV output format."
+msgstr ""
+
+msgid "Set JSON output format."
+msgstr ""
+
+#, fuzzy
+msgid "Set a machine-readable output format (csv, json)."
+msgstr "Ugyldig tabellstil %d."
+
+#, fuzzy
+msgid "Set name of config to use."
+msgstr "\t--config, -c <navn>\t\tNavn som skal brukes i oppsettet."
+
+msgid "Set snapshot as default snapshot."
+msgstr ""
+
+#, fuzzy
+msgid "Set snapshot read-only."
+msgstr "Diskbilde kunne ikke opprettes."
+
+#, fuzzy
+msgid "Set snapshot read-write."
+msgstr "Diskbilde kunne ikke opprettes."
 
 #, c-format
 msgid "Setting default subvolume to snapshot %d."
@@ -802,6 +915,13 @@ msgstr "Øyeblikksbildet er i bruk."
 msgid "Subvolume"
 msgstr "Undervolum"
 
+#, fuzzy
+msgid "Suppress normal output."
+msgstr "\t--quiet, -q\t\t\tUndertrykk vanlig visning."
+
+msgid "Sync after deletion."
+msgstr ""
+
 #. TRANSLATORS: symbol for "tera" (best keep untranslated)
 msgid "T"
 msgstr ""
@@ -809,6 +929,10 @@ msgstr ""
 #. TRANSLATORS: symbol for "tera bytes" (best keep untranslated)
 msgid "TB"
 msgstr ""
+
+#, fuzzy
+msgid "Table style (integer)."
+msgstr "\t--table-style, -t <style>\tTabellformat (heltall)."
 
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr ""
@@ -826,8 +950,22 @@ msgstr ""
 msgid "Try 'snapper --help' for more information."
 msgstr "Forsøk 'snapper --help' for mer informasjon."
 
+msgid "Try to make space available."
+msgstr ""
+
+msgid "Turn on debugging."
+msgstr ""
+
 msgid "Type"
 msgstr "Type"
+
+#, fuzzy
+msgid "Type for snapshot."
+msgstr "Ukjent type for øyeblikksbilde."
+
+#, fuzzy
+msgid "Type of snapshots to list."
+msgstr "\t--type, -t <type>\t\tType øyeblikksbilder som skal vises."
 
 #, c-format
 msgid "Unknown cleanup algorithm '%s'."
@@ -878,6 +1016,14 @@ msgstr "Filen '%s' ikke funnet på medium '%s'"
 #, c-format
 msgid "Userdata '%s' has empty key."
 msgstr ""
+
+#, fuzzy
+msgid "Userdata for snapshot."
+msgstr "\t--userdata, -u <userdata>\tBrukerdata for øyeblikksbilde."
+
+#, fuzzy
+msgid "Userdata for snapshots."
+msgstr "Identiske øyeblikksbilder."
 
 msgid "Value"
 msgstr "Verdi"
@@ -934,8 +1080,13 @@ msgstr "bruk: snapper [--globale valg] <kommando> [--kommandovalg] [kommandoargu
 msgid "yes"
 msgstr ""
 
-#~ msgid "Unknown type of snapshot."
-#~ msgstr "Ukjent type for øyeblikksbilde."
+#, fuzzy
+#~ msgid "\t--description, -d <description>\tDescription for snapshots."
+#~ msgstr "\t--description, -d <beskrivelse>\tBeskrivelse av øyeblikksbilde."
+
+#, fuzzy
+#~ msgid "\t--userdata, -u <userdata>\tUserdata for snapshots."
+#~ msgstr "\t--userdata, -u <userdata>\tBrukerdata for øyeblikksbilde."
 
 #~ msgid "Unknown type of snapshots."
 #~ msgstr "Ukjent type for øyeblikksbilder."
@@ -956,9 +1107,6 @@ msgstr ""
 
 #~ msgid "Command failed (%s). See log for more information."
 #~ msgstr "Kommandoen mislyktes (%s). Loggen inneholder mer informasjon."
-
-#~ msgid "comparing snapshots..."
-#~ msgstr "sammenligner øyeblikksbilder..."
 
 #~ msgid "done"
 #~ msgstr "fullført"
