--- a/po/lt.po
+++ b/po/lt.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: LCN (@memory@)\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-28 08:50+0100\n"
+"POT-Creation-Date: 2024-02-26 12:27+0100\n"
 "PO-Revision-Date: 2017-06-02 16:57+0000\n"
 "Last-Translator: Mindaugas Baranauskas <opensuse.lietuviu.kalba@gmail.com>\n"
 "Language-Team: Lithuanian <https://l10n.opensuse.org/projects/snapper/master/lt/>\n"
@@ -19,160 +19,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n==1 ? 0 : n%10>=2 && (n%100<10 || n%100>=20) ? 1 : n%10==0 || (n%100>10 && n%100<20) ? 2 : 3);\n"
 "X-Generator: Weblate 2.6\n"
-
-msgid "\t--abbreviate\t\t\tAllow to abbreviate table columns."
-msgstr ""
-
-msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
-msgstr "\t--all-configs, -a\t\tpateikti visų prieinamų momentinių kopijų sąrašą."
-
-msgid "\t--ambit, -a ambit\t\tOperate in the specified ambit."
-msgstr ""
-
-msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshot."
-msgstr ""
-
-msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
-msgstr ""
-
-msgid ""
-"\t--columns <columns>\t\tColumns to show separated by comma.\n"
-"\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
-"\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
-"\t\t\t\t\tpre-number, post-number, post-date, read-only."
-msgstr ""
-
-msgid ""
-"\t--columns <columns>\t\tColumns to show separated by comma.\n"
-"\t\t\t\t\tPossible columns: key, value.\n"
-"\t\t\t\t\tColumns are not selected when JSON format is used."
-msgstr ""
-
-msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
-msgstr ""
-
-msgid "\t--config, -c <name>\t\tSet name of config to use."
-msgstr ""
-
-msgid "\t--csvout\t\t\tSet CSV output format."
-msgstr ""
-
-msgid "\t--debug\t\t\t\tTurn on debugging."
-msgstr ""
-
-msgid "\t--default\t\t\tSet snapshot as default snapshot."
-msgstr ""
-
-msgid "\t--description, -d <description>\tDescription for snapshot."
-msgstr ""
-
-msgid "\t--description, -d <description>\tDescription for snapshots."
-msgstr ""
-
-msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
-msgstr ""
-
-msgid "\t--disable-used-space\t\tDisable showing used space."
-msgstr ""
-
-msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
-msgstr ""
-
-msgid "\t--free-space <space>\t\tTry to make space available."
-msgstr ""
-
-msgid "\t--from <number>\t\t\tCreate a snapshot from the specified snapshot."
-msgstr ""
-
-msgid "\t--fstype, -f <fstype>\t\tManually set filesystem type."
-msgstr ""
-
-msgid "\t--input, -i <file>\t\tRead files for which to undo changes from file."
-msgstr ""
-
-msgid "\t--input, -i <file>\t\tRead files to diff from file."
-msgstr ""
-
-msgid "\t--iso\t\t\t\tDisplay dates and times in ISO format."
-msgstr ""
-
-msgid "\t--jsonout\t\t\tSet JSON output format."
-msgstr ""
-
-msgid "\t--machine-readable <format>\tSet a machine-readable output format (csv, json)."
-msgstr ""
-
-msgid "\t--no-dbus\t\t\tOperate without DBus."
-msgstr ""
-
-msgid "\t--no-headers\t\t\tNo headers for CSV output format."
-msgstr ""
-
-msgid "\t--output, -o <file>\t\tSave status to file."
-msgstr ""
-
-msgid "\t--path <path>\t\t\tCleanup all configs affecting path."
-msgstr ""
-
-msgid "\t--pre-number <number>\t\tNumber of corresponding pre snapshot."
-msgstr ""
-
-msgid "\t--print-number, -p\t\tPrint number of created snapshot."
-msgstr ""
-
-msgid "\t--print-number, -p\t\tPrint number of second created snapshot."
-msgstr ""
-
-msgid "\t--quiet, -q\t\t\tSuppress normal output."
-msgstr ""
-
-msgid "\t--read-only\t\t\tCreate read-only snapshot."
-msgstr ""
-
-msgid "\t--read-only\t\t\tSet snapshot read-only."
-msgstr ""
-
-msgid "\t--read-write\t\t\tCreate read-write snapshot."
-msgstr ""
-
-msgid "\t--read-write\t\t\tSet snapshot read-write."
-msgstr ""
-
-msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
-msgstr ""
-
-msgid "\t--separator <separator>\t\tCharacter separator for CSV output format."
-msgstr ""
-
-msgid "\t--sync, -s\t\t\tSync after deletion."
-msgstr ""
-
-msgid "\t--table-style, -t <style>\tTable style (integer)."
-msgstr ""
-
-msgid "\t--template, -t <name>\t\tName of config template to use."
-msgstr ""
-
-msgid "\t--type, -t <type>\t\tType for snapshot."
-msgstr ""
-
-msgid "\t--type, -t <type>\t\tType of snapshots to list."
-msgstr ""
-
-msgid "\t--userdata, -u <userdata>\tUserdata for snapshot."
-msgstr ""
-
-msgid "\t--userdata, -u <userdata>\tUserdata for snapshots."
-msgstr ""
-
-msgid "\t--utc\t\t\t\tDisplay dates and times in UTC."
-msgstr ""
-
-msgid "\t--verbose, -v\t\t\tIncrease verbosity."
-msgstr ""
-
-msgid "\t--version\t\t\tPrint version and exit."
-msgstr ""
 
 msgid "\tsnapper cleanup <cleanup-algorithm>"
 msgstr ""
@@ -252,10 +98,7 @@ msgstr ""
 msgid "    Options for 'list' command:"
 msgstr ""
 
-msgid ""
-"    Options for 'list-configs' command:\n"
-"\t--columns <columns>\t\tColumns to show separated by comma.\n"
-"\t\t\t\t\tPossible columns: config, subvolume.\n"
+msgid "    Options for 'list-configs' command:"
 msgstr ""
 
 msgid "    Options for 'modify' command:"
@@ -345,6 +188,127 @@ msgstr ""
 msgid "(Snapshot %d.)"
 msgstr "Rinkmena „%s“ nerasta."
 
+msgid "--abbreviate"
+msgstr ""
+
+msgid "--all-configs, -a"
+msgstr ""
+
+msgid "--ambit, -a <ambit>"
+msgstr ""
+
+msgid "--cleanup-algorithm, -c <algo>"
+msgstr ""
+
+msgid "--columns <columns>"
+msgstr ""
+
+msgid "--command <command>"
+msgstr ""
+
+msgid "--config, -c <name>"
+msgstr ""
+
+msgid "--csvout"
+msgstr ""
+
+msgid "--debug"
+msgstr ""
+
+msgid "--default"
+msgstr ""
+
+msgid "--description, -d <description>"
+msgstr ""
+
+msgid "--diff-cmd <command>"
+msgstr ""
+
+msgid "--disable-used-space"
+msgstr ""
+
+msgid "--extensions, -x <options>"
+msgstr ""
+
+msgid "--free-space <space>"
+msgstr ""
+
+msgid "--from <number>"
+msgstr ""
+
+msgid "--fstype, -f <fstype>"
+msgstr ""
+
+msgid "--input, -i <file>"
+msgstr ""
+
+msgid "--iso"
+msgstr ""
+
+msgid "--jsonout"
+msgstr ""
+
+#, fuzzy
+msgid "--machine-readable <format>"
+msgstr "Netinkamas lentelės stilius %d."
+
+msgid "--no-dbus"
+msgstr ""
+
+msgid "--no-headers"
+msgstr ""
+
+msgid "--output, -o <file>"
+msgstr ""
+
+msgid "--path <path>"
+msgstr ""
+
+msgid "--pre-number <number>"
+msgstr ""
+
+msgid "--print-number, -p"
+msgstr ""
+
+msgid "--quiet, -q"
+msgstr ""
+
+msgid "--read-only"
+msgstr ""
+
+msgid "--read-write"
+msgstr ""
+
+msgid "--root, -r <path>"
+msgstr ""
+
+msgid "--separator <separator>"
+msgstr ""
+
+msgid "--sync, -s"
+msgstr ""
+
+msgid "--table-style, -t <style>"
+msgstr ""
+
+msgid "--template, -t <name>"
+msgstr ""
+
+msgid "--type, -t <type>"
+msgstr ""
+
+msgid "--userdata, -u <userdata>"
+msgstr ""
+
+msgid "--utc"
+msgstr ""
+
+msgid "--verbose, -v"
+msgstr ""
+
+msgid "--version"
+msgstr ""
+
 #, fuzzy
 msgid "ACL error."
 msgstr "Skaitymo/rašymo klaida."
@@ -353,6 +317,9 @@ msgid "Active"
 msgstr ""
 
 msgid "Active snapshot is already default snapshot."
+msgstr ""
+
+msgid "Allow to abbreviate table columns."
 msgstr ""
 
 #, c-format
@@ -381,12 +348,29 @@ msgstr ""
 msgid "Cannot do rollback since default subvolume is unknown."
 msgstr ""
 
+msgid "Character separator for CSV output format."
+msgstr ""
+
 msgid "Cleanup"
 msgstr "Išvalymas"
+
+#, fuzzy
+msgid "Cleanup algorithm for snapshot."
+msgstr "  Momentines kopijų išvalymas:"
+
+#, fuzzy
+msgid "Cleanup algorithm for snapshots."
+msgstr "  Momentines kopijų išvalymas:"
+
+msgid "Cleanup all configs affecting path."
+msgstr ""
 
 #, fuzzy, c-format
 msgid "Client-side plugin '%s' failed."
 msgstr "Nepavyko atverti rinkmenos „%s“."
+
+msgid "Columns to show separated by comma."
+msgstr ""
 
 msgid "Command 'cleanup' needs one arguments."
 msgstr "„cleanup“ komandai reikia vieno argumento."
@@ -463,6 +447,9 @@ msgstr ""
 msgid "Command 'xadiff' needs at least one argument."
 msgstr "„diff“ komandai reikia bent vieno argumento."
 
+msgid "Command used for comparing files."
+msgstr ""
+
 msgid "Config"
 msgstr "Konfigūracija"
 
@@ -494,6 +481,18 @@ msgstr ""
 
 msgid "Could not make enough free space available."
 msgstr ""
+
+#, fuzzy
+msgid "Create a snapshot from the specified snapshot."
+msgstr "Klaida kuriant momentinę kopiją."
+
+#, fuzzy
+msgid "Create read-only snapshot."
+msgstr "  Momentinės kopijos sukūrimas:"
+
+#, fuzzy
+msgid "Create read-write snapshot."
+msgstr "Klaida kuriant momentinę kopiją."
 
 #, c-format
 msgid "Creating config failed (%s)."
@@ -540,8 +539,25 @@ msgstr[3] "Klaida bandant pašalinti momentinę kopiją."
 msgid "Description"
 msgstr "Aprašas"
 
+#, fuzzy
+msgid "Description for snapshot."
+msgstr "Aprašas"
+
+#, fuzzy
+msgid "Description for snapshots."
+msgstr "lyginamos momentinės kopijos..."
+
 msgid "Detecting filesystem type failed."
 msgstr "Nepavyko nustatyti rinkmenų sistemos tipo."
+
+msgid "Disable showing used space."
+msgstr ""
+
+msgid "Display dates and times in ISO format."
+msgstr ""
+
+msgid "Display dates and times in UTC."
+msgstr ""
 
 #. TRANSLATORS: symbol for "exa" (best keep untranslated)
 msgid "E"
@@ -566,6 +582,9 @@ msgstr "Netinkami naudotojo meta duomenys."
 #, fuzzy, c-format
 msgid "Error (%s)."
 msgstr "Skaitymo/rašymo klaida."
+
+msgid "Extra options passed to the diff command."
+msgstr ""
 
 msgid "Failed to initialize filesystem handler."
 msgstr ""
@@ -628,6 +647,9 @@ msgstr "Momentinės kopijos vienodos."
 msgid "Illegal snapshot."
 msgstr "Netinkama momentinė kopija."
 
+msgid "Increase verbosity."
+msgstr ""
+
 #, fuzzy, c-format
 msgid "Invalid ambit '%s'."
 msgstr "Netinkama momentinė kopija „%s“."
@@ -635,6 +657,10 @@ msgstr "Netinkama momentinė kopija „%s“."
 #, fuzzy, c-format
 msgid "Invalid column '%s'."
 msgstr "Netinkama momentinė kopija „%s“."
+
+#, fuzzy
+msgid "Invalid config."
+msgstr "Netinkami naudotojo meta duomenys."
 
 #, fuzzy
 msgid "Invalid configdata."
@@ -684,6 +710,10 @@ msgstr ""
 msgid "KiB"
 msgstr ""
 
+#, fuzzy
+msgid "List snapshots from all accessible configs."
+msgstr "\t--all-configs, -a\t\tpateikti visų prieinamų momentinių kopijų sąrašą."
+
 #, c-format
 msgid "Listing configs failed (%s)."
 msgstr ""
@@ -695,6 +725,10 @@ msgstr ""
 #. TRANSLATORS: symbol for "mega bytes" (best keep untranslated)
 msgid "MB"
 msgstr ""
+
+#, fuzzy
+msgid "Manually set filesystem type."
+msgstr "Nepavyko nustatyti rinkmenų sistemos tipo."
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
 msgstr ""
@@ -721,15 +755,36 @@ msgstr ""
 msgid "Missing or invalid pre-number."
 msgstr ""
 
+msgid "Name"
+msgstr ""
+
+msgid "Name of config template to use."
+msgstr ""
+
 msgid "No command provided."
 msgstr "Nepateikta jokia komanda."
+
+msgid "No headers for CSV output format."
+msgstr ""
 
 msgid "No permissions."
 msgstr "Nėra leidimų."
 
+msgid "Number of corresponding pre snapshot."
+msgstr ""
+
 #, c-format
 msgid "Opening file '%s' failed."
 msgstr "Nepavyko atverti rinkmenos „%s“."
+
+msgid "Operate in the specified ambit."
+msgstr ""
+
+msgid "Operate on target root (works only without DBus)."
+msgstr ""
+
+msgid "Operate without DBus."
+msgstr ""
 
 msgid "Option --from only supported for snapshots of type single."
 msgstr ""
@@ -762,11 +817,33 @@ msgstr "Prieš: Nr."
 msgid "Pre Date"
 msgstr "Prieš: data"
 
+#, fuzzy
+msgid "Print number of created snapshot."
+msgstr "  Momentinės kopijos sukūrimas:"
+
+msgid "Print number of second created snapshot."
+msgstr ""
+
+msgid "Print version and exit."
+msgstr ""
+
 #, fuzzy, c-format
 msgid "Quota error (%s)."
 msgstr "Skaitymo/rašymo klaida."
 
+msgid "Read files for which to undo changes from file."
+msgstr ""
+
+msgid "Read files to diff from file."
+msgstr ""
+
 msgid "Read-Only"
+msgstr ""
+
+msgid "Run command and create pre and post snapshots."
+msgstr ""
+
+msgid "Save status to file."
 msgstr ""
 
 #, fuzzy
@@ -776,6 +853,30 @@ msgstr "Daugiau informacijos gausite įvykdę „snapper --help“."
 #, fuzzy, c-format
 msgid "Server-side plugin '%s' failed."
 msgstr "Nepavyko atverti rinkmenos „%s“."
+
+msgid "Set CSV output format."
+msgstr ""
+
+msgid "Set JSON output format."
+msgstr ""
+
+#, fuzzy
+msgid "Set a machine-readable output format (csv, json)."
+msgstr "Netinkamas lentelės stilius %d."
+
+msgid "Set name of config to use."
+msgstr ""
+
+msgid "Set snapshot as default snapshot."
+msgstr ""
+
+#, fuzzy
+msgid "Set snapshot read-only."
+msgstr "Klaida kuriant momentinę kopiją."
+
+#, fuzzy
+msgid "Set snapshot read-write."
+msgstr "Klaida kuriant momentinę kopiją."
 
 #, c-format
 msgid "Setting default subvolume to snapshot %d."
@@ -791,12 +892,21 @@ msgstr "Momentinė kopija naudojama."
 msgid "Subvolume"
 msgstr "Potomis"
 
+msgid "Suppress normal output."
+msgstr ""
+
+msgid "Sync after deletion."
+msgstr ""
+
 #. TRANSLATORS: symbol for "tera" (best keep untranslated)
 msgid "T"
 msgstr ""
 
 #. TRANSLATORS: symbol for "tera bytes" (best keep untranslated)
 msgid "TB"
+msgstr ""
+
+msgid "Table style (integer)."
 msgstr ""
 
 msgid "The ambit can be specified manually using the --ambit option."
@@ -815,8 +925,22 @@ msgstr ""
 msgid "Try 'snapper --help' for more information."
 msgstr "Daugiau informacijos gausite įvykdę „snapper --help“."
 
+msgid "Try to make space available."
+msgstr ""
+
+msgid "Turn on debugging."
+msgstr ""
+
 msgid "Type"
 msgstr "Tipas"
+
+#, fuzzy
+msgid "Type for snapshot."
+msgstr "Nežinomas momentinės kopijos tipas."
+
+#, fuzzy
+msgid "Type of snapshots to list."
+msgstr "Nežinomi momentinių kopijų tipai."
 
 #, c-format
 msgid "Unknown cleanup algorithm '%s'."
@@ -867,6 +991,14 @@ msgstr ""
 #, c-format
 msgid "Userdata '%s' has empty key."
 msgstr ""
+
+#, fuzzy
+msgid "Userdata for snapshot."
+msgstr "Momentinės kopijos vienodos."
+
+#, fuzzy
+msgid "Userdata for snapshots."
+msgstr "Momentinės kopijos vienodos."
 
 msgid "Value"
 msgstr "Reikšmė"
@@ -923,12 +1055,6 @@ msgstr "naudojimas: snapper [--visuotinės-parinktys] <komanda> [--komandos-pari
 msgid "yes"
 msgstr ""
 
-#~ msgid "Unknown type of snapshot."
-#~ msgstr "Nežinomas momentinės kopijos tipas."
-
-#~ msgid "Unknown type of snapshots."
-#~ msgstr "Nežinomi momentinių kopijų tipai."
-
 #, fuzzy
 #~ msgid "Quota failure (%s)."
 #~ msgstr "Nesėkmė"
@@ -940,9 +1066,6 @@ msgstr ""
 #~| msgid "Try 'snapper help' for more information."
 #~ msgid "Command failed (%s). See log for more information."
 #~ msgstr "Daugiau informacijos gausite įvykdę „snapper help“."
-
-#~ msgid "comparing snapshots..."
-#~ msgstr "lyginamos momentinės kopijos..."
 
 #~ msgid "done"
 #~ msgstr "atlikta"
