--- a/po/tr.po
+++ b/po/tr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-28 08:50+0100\n"
+"POT-Creation-Date: 2024-02-26 12:27+0100\n"
 "PO-Revision-Date: 2022-02-10 15:12+0000\n"
 "Last-Translator: Murat Servan Kahraman <muratservan@outlook.com>\n"
 "Language-Team: Turkish <https://l10n.opensuse.org/projects/snapper/master/tr/>\n"
@@ -18,168 +18,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 4.9.1\n"
-
-msgid "\t--abbreviate\t\t\tAllow to abbreviate table columns."
-msgstr ""
-
-msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
-msgstr ""
-
-msgid "\t--ambit, -a ambit\t\tOperate in the specified ambit."
-msgstr ""
-
-msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshot."
-msgstr "\t--cleanup-algorithm, -c <algo>\tAnlık görüntüler için temizleme algoritması."
-
-msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
-msgstr ""
-
-msgid ""
-"\t--columns <columns>\t\tColumns to show separated by comma.\n"
-"\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
-"\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
-"\t\t\t\t\tpre-number, post-number, post-date, read-only."
-msgstr ""
-
-msgid ""
-"\t--columns <columns>\t\tColumns to show separated by comma.\n"
-"\t\t\t\t\tPossible columns: key, value.\n"
-"\t\t\t\t\tColumns are not selected when JSON format is used."
-msgstr ""
-
-msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
-msgstr ""
-
-msgid "\t--config, -c <name>\t\tSet name of config to use."
-msgstr "\t--config, -c <name>\t\tKullanmak için yapılandırma ismini ayarla."
-
-msgid "\t--csvout\t\t\tSet CSV output format."
-msgstr ""
-
-msgid "\t--debug\t\t\t\tTurn on debugging."
-msgstr ""
-
-msgid "\t--default\t\t\tSet snapshot as default snapshot."
-msgstr ""
-
-msgid "\t--description, -d <description>\tDescription for snapshot."
-msgstr "\t--description, -d <description>\tAnlık görüntü tanımı."
-
-msgid "\t--description, -d <description>\tDescription for snapshots."
-msgstr ""
-
-msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
-msgstr ""
-
-#, fuzzy
-msgid "\t--disable-used-space\t\tDisable showing used space."
-msgstr "\t--filtreleri-gösterme\t\tFiltreleri gösterme."
-
-msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
-msgstr ""
-
-msgid "\t--free-space <space>\t\tTry to make space available."
-msgstr ""
-
-msgid "\t--from <number>\t\t\tCreate a snapshot from the specified snapshot."
-msgstr ""
-
-msgid "\t--fstype, -f <fstype>\t\tManually set filesystem type."
-msgstr "\t--fstype, -f <fstype>\t\tDosya sistemi türünü elle ayarla."
-
-#, fuzzy
-msgid "\t--input, -i <file>\t\tRead files for which to undo changes from file."
-msgstr "\t--giriş, -i <file>\t\tDosyadan değişiklikleri geri almak için dosyaları oku."
-
-#, fuzzy
-msgid "\t--input, -i <file>\t\tRead files to diff from file."
-msgstr "\t--giriş, -i <file>\t\tDosyadan değişiklikleri geri almak için dosyaları oku."
-
-msgid "\t--iso\t\t\t\tDisplay dates and times in ISO format."
-msgstr ""
-
-msgid "\t--jsonout\t\t\tSet JSON output format."
-msgstr ""
-
-msgid "\t--machine-readable <format>\tSet a machine-readable output format (csv, json)."
-msgstr ""
-
-msgid "\t--no-dbus\t\t\tOperate without DBus."
-msgstr ""
-
-msgid "\t--no-headers\t\t\tNo headers for CSV output format."
-msgstr ""
-
-msgid "\t--output, -o <file>\t\tSave status to file."
-msgstr "\t--output, -o <file>\t\tDurumu dosyaya kaydet."
-
-msgid "\t--path <path>\t\t\tCleanup all configs affecting path."
-msgstr ""
-
-#, fuzzy
-msgid "\t--pre-number <number>\t\tNumber of corresponding pre snapshot."
-msgstr "\t--ön-numara <number>\t\tİlgili önceki anlık görüntü numarası."
-
-msgid "\t--print-number, -p\t\tPrint number of created snapshot."
-msgstr "\t--print-number, -p\t\tOluşturulan anlık görüntünün numarasını yaz."
-
-msgid "\t--print-number, -p\t\tPrint number of second created snapshot."
-msgstr ""
-
-msgid "\t--quiet, -q\t\t\tSuppress normal output."
-msgstr "\t--quiet, -q\t\t\tNormal olan çıktıları gizle."
-
-msgid "\t--read-only\t\t\tCreate read-only snapshot."
-msgstr ""
-
-msgid "\t--read-only\t\t\tSet snapshot read-only."
-msgstr ""
-
-msgid "\t--read-write\t\t\tCreate read-write snapshot."
-msgstr ""
-
-msgid "\t--read-write\t\t\tSet snapshot read-write."
-msgstr ""
-
-msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
-msgstr ""
-
-msgid "\t--separator <separator>\t\tCharacter separator for CSV output format."
-msgstr ""
-
-msgid "\t--sync, -s\t\t\tSync after deletion."
-msgstr ""
-
-#, fuzzy
-msgid "\t--table-style, -t <style>\tTable style (integer)."
-msgstr "\t--table-style, -t <style>\tTablo stili (tamsayı)."
-
-#, fuzzy
-msgid "\t--template, -t <name>\t\tName of config template to use."
-msgstr "\t--şablon, -t <name>\t\tKullanmak için yapılandırma şablonu ismi."
-
-msgid "\t--type, -t <type>\t\tType for snapshot."
-msgstr "\t--type, -t <type>\t\tAnlık görüntü türü."
-
-#, fuzzy
-msgid "\t--type, -t <type>\t\tType of snapshots to list."
-msgstr "\t--tip, -t <type>\t\tListelemek için anlım görüntü tipleri."
-
-#, fuzzy
-msgid "\t--userdata, -u <userdata>\tUserdata for snapshot."
-msgstr "\t--kullanıcıverisi, -u <userdata>\tAnlık görüntü için kullanıcı verisi."
-
-msgid "\t--userdata, -u <userdata>\tUserdata for snapshots."
-msgstr ""
-
-msgid "\t--utc\t\t\t\tDisplay dates and times in UTC."
-msgstr ""
-
-msgid "\t--verbose, -v\t\t\tIncrease verbosity."
-msgstr "\t--verbose, -v\t\t\tAyrıntıyı arttır."
-
-msgid "\t--version\t\t\tPrint version and exit."
-msgstr "\t--version\t\t\tSürümü yazdır ve çık."
 
 #, fuzzy
 msgid "\tsnapper cleanup <cleanup-algorithm>"
@@ -280,11 +118,9 @@ msgstr "    'create-config' komutu için seçenekler:"
 msgid "    Options for 'list' command:"
 msgstr "    'list' komutu için seçenekler:"
 
-msgid ""
-"    Options for 'list-configs' command:\n"
-"\t--columns <columns>\t\tColumns to show separated by comma.\n"
-"\t\t\t\t\tPossible columns: config, subvolume.\n"
-msgstr ""
+#, fuzzy
+msgid "    Options for 'list-configs' command:"
+msgstr "    'create-config' komutu için seçenekler:"
 
 msgid "    Options for 'modify' command:"
 msgstr "    'modify' komutu için seçenekler:"
@@ -391,6 +227,134 @@ msgstr ""
 msgid "(Snapshot %d.)"
 msgstr ""
 
+msgid "--abbreviate"
+msgstr ""
+
+msgid "--all-configs, -a"
+msgstr ""
+
+msgid "--ambit, -a <ambit>"
+msgstr ""
+
+#, fuzzy
+msgid "--cleanup-algorithm, -c <algo>"
+msgstr "\t--cleanup-algorithm, -c <algo>\tAnlık görüntüler için temizleme algoritması."
+
+msgid "--columns <columns>"
+msgstr ""
+
+msgid "--command <command>"
+msgstr ""
+
+msgid "--config, -c <name>"
+msgstr ""
+
+msgid "--csvout"
+msgstr ""
+
+msgid "--debug"
+msgstr ""
+
+#, fuzzy
+msgid "--default"
+msgstr "Varsayılan"
+
+#, fuzzy
+msgid "--description, -d <description>"
+msgstr "\t--description, -d <description>\tAnlık görüntü tanımı."
+
+msgid "--diff-cmd <command>"
+msgstr ""
+
+msgid "--disable-used-space"
+msgstr ""
+
+msgid "--extensions, -x <options>"
+msgstr ""
+
+msgid "--free-space <space>"
+msgstr ""
+
+msgid "--from <number>"
+msgstr ""
+
+msgid "--fstype, -f <fstype>"
+msgstr ""
+
+msgid "--input, -i <file>"
+msgstr ""
+
+msgid "--iso"
+msgstr ""
+
+msgid "--jsonout"
+msgstr ""
+
+#, fuzzy
+msgid "--machine-readable <format>"
+msgstr "%d geçersiz tablo stili."
+
+msgid "--no-dbus"
+msgstr ""
+
+msgid "--no-headers"
+msgstr ""
+
+#, fuzzy
+msgid "--output, -o <file>"
+msgstr "\t--output, -o <file>\t\tDurumu dosyaya kaydet."
+
+msgid "--path <path>"
+msgstr ""
+
+msgid "--pre-number <number>"
+msgstr ""
+
+msgid "--print-number, -p"
+msgstr ""
+
+msgid "--quiet, -q"
+msgstr ""
+
+msgid "--read-only"
+msgstr ""
+
+msgid "--read-write"
+msgstr ""
+
+msgid "--root, -r <path>"
+msgstr ""
+
+msgid "--separator <separator>"
+msgstr ""
+
+msgid "--sync, -s"
+msgstr ""
+
+#, fuzzy
+msgid "--table-style, -t <style>"
+msgstr "\t--table-style, -t <style>\tTablo stili (tamsayı)."
+
+msgid "--template, -t <name>"
+msgstr ""
+
+#, fuzzy
+msgid "--type, -t <type>"
+msgstr "\t--type, -t <type>\t\tAnlık görüntü türü."
+
+#, fuzzy
+msgid "--userdata, -u <userdata>"
+msgstr "\t--kullanıcıverisi, -u <userdata>\tAnlık görüntü için kullanıcı verisi."
+
+msgid "--utc"
+msgstr ""
+
+msgid "--verbose, -v"
+msgstr ""
+
+msgid "--version"
+msgstr ""
+
 msgid "ACL error."
 msgstr ""
 
@@ -398,6 +362,9 @@ msgid "Active"
 msgstr ""
 
 msgid "Active snapshot is already default snapshot."
+msgstr ""
+
+msgid "Allow to abbreviate table columns."
 msgstr ""
 
 #, c-format
@@ -426,13 +393,30 @@ msgstr ""
 msgid "Cannot do rollback since default subvolume is unknown."
 msgstr ""
 
+msgid "Character separator for CSV output format."
+msgstr ""
+
 #, fuzzy
 msgid "Cleanup"
 msgstr "Temizle"
 
+#, fuzzy
+msgid "Cleanup algorithm for snapshot."
+msgstr "\t--cleanup-algorithm, -c <algo>\tAnlık görüntüler için temizleme algoritması."
+
+#, fuzzy
+msgid "Cleanup algorithm for snapshots."
+msgstr "  Anlık görüntüleri temizle:"
+
+msgid "Cleanup all configs affecting path."
+msgstr ""
+
 #, fuzzy, c-format
 msgid "Client-side plugin '%s' failed."
 msgstr "'%s ' dosyasını açma başarısız oldu."
+
+msgid "Columns to show separated by comma."
+msgstr ""
 
 #, fuzzy
 msgid "Command 'cleanup' needs one arguments."
@@ -519,6 +503,9 @@ msgstr "'değişiklikleri geri al' komutu için en az bir argüman gereklidir."
 msgid "Command 'xadiff' needs at least one argument."
 msgstr "'değiştir' komutu için en az bir argüman gereklidir."
 
+msgid "Command used for comparing files."
+msgstr ""
+
 #, fuzzy
 msgid "Config"
 msgstr "Yapılandırma"
@@ -553,6 +540,18 @@ msgstr ""
 
 msgid "Could not make enough free space available."
 msgstr ""
+
+msgid "Create a snapshot from the specified snapshot."
+msgstr ""
+
+#, fuzzy
+msgid "Create read-only snapshot."
+msgstr "Mevcut sistemin salt-okunur anlık görüntüsü oluşturuluyor."
+
+# clients/inst_custom_part.ycp:2940
+#, fuzzy
+msgid "Create read-write snapshot."
+msgstr "  Anlık görüntü oluştur:"
 
 #, c-format
 msgid "Creating config failed (%s)."
@@ -598,8 +597,26 @@ msgstr[0] "Yapılandırma oluşturma başarısız oldu (%s)."
 msgid "Description"
 msgstr "Tanım"
 
+#, fuzzy
+msgid "Description for snapshot."
+msgstr "Tanım"
+
+#, fuzzy
+msgid "Description for snapshots."
+msgstr "Anlık görüntüler karşılaştırılıyor..."
+
 msgid "Detecting filesystem type failed."
 msgstr "Dosya sistemi türünü tespit etme başarısız oldu."
+
+#, fuzzy
+msgid "Disable showing used space."
+msgstr "\t--filtreleri-gösterme\t\tFiltreleri gösterme."
+
+msgid "Display dates and times in ISO format."
+msgstr ""
+
+msgid "Display dates and times in UTC."
+msgstr ""
 
 #. TRANSLATORS: symbol for "exa" (best keep untranslated)
 #, fuzzy
@@ -624,6 +641,10 @@ msgstr ""
 #, fuzzy, c-format
 msgid "Error (%s)."
 msgstr "Giriş/Çıkış hatası"
+
+#, fuzzy
+msgid "Extra options passed to the diff command."
+msgstr "    'değiştir' komutu için seçenekler:"
 
 msgid "Failed to initialize filesystem handler."
 msgstr ""
@@ -690,6 +711,10 @@ msgstr "Özdeş anlık görüntüler."
 msgid "Illegal snapshot."
 msgstr "Geçersiz anlık görüntü."
 
+#, fuzzy
+msgid "Increase verbosity."
+msgstr "\t--verbose, -v\t\t\tAyrıntıyı arttır."
+
 #, fuzzy, c-format
 msgid "Invalid ambit '%s'."
 msgstr "Geçersiz '%s' anlık görüntüsü."
@@ -697,6 +722,10 @@ msgstr "Geçersiz '%s' anlık görüntüsü."
 #, fuzzy, c-format
 msgid "Invalid column '%s'."
 msgstr "Geçersiz '%s' anlık görüntüsü."
+
+#, fuzzy
+msgid "Invalid config."
+msgstr "Geçersiz kullanıcı verisi."
 
 #, fuzzy
 msgid "Invalid configdata."
@@ -749,6 +778,9 @@ msgstr "Kenya"
 msgid "KiB"
 msgstr "KiB"
 
+msgid "List snapshots from all accessible configs."
+msgstr ""
+
 #, c-format
 msgid "Listing configs failed (%s)."
 msgstr "Yapılandırmaları listeleme başarısız oldu (%s)."
@@ -760,6 +792,10 @@ msgstr "M"
 #. TRANSLATORS: symbol for "mega bytes" (best keep untranslated)
 msgid "MB"
 msgstr "MB"
+
+#, fuzzy
+msgid "Manually set filesystem type."
+msgstr "\t--fstype, -f <fstype>\t\tDosya sistemi türünü elle ayarla."
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
 msgstr ""
@@ -788,15 +824,38 @@ msgstr ""
 msgid "Missing or invalid pre-number."
 msgstr "Eksik ya da geçersiz ön numara."
 
+msgid "Name"
+msgstr ""
+
+#, fuzzy
+msgid "Name of config template to use."
+msgstr "\t--şablon, -t <name>\t\tKullanmak için yapılandırma şablonu ismi."
+
 msgid "No command provided."
 msgstr "Komut sağlanmadı."
+
+msgid "No headers for CSV output format."
+msgstr ""
 
 msgid "No permissions."
 msgstr ""
 
+#, fuzzy
+msgid "Number of corresponding pre snapshot."
+msgstr "\t--ön-numara <number>\t\tİlgili önceki anlık görüntü numarası."
+
 #, c-format
 msgid "Opening file '%s' failed."
 msgstr "'%s ' dosyasını açma başarısız oldu."
+
+msgid "Operate in the specified ambit."
+msgstr ""
+
+msgid "Operate on target root (works only without DBus)."
+msgstr ""
+
+msgid "Operate without DBus."
+msgstr ""
 
 msgid "Option --from only supported for snapshots of type single."
 msgstr ""
@@ -833,13 +892,40 @@ msgstr "Önce #"
 msgid "Pre Date"
 msgstr "Düzenlenme Tarihi"
 
+#, fuzzy
+msgid "Print number of created snapshot."
+msgstr "\t--print-number, -p\t\tOluşturulan anlık görüntünün numarasını yaz."
+
+#, fuzzy
+msgid "Print number of second created snapshot."
+msgstr "\t--print-number, -p\t\tOluşturulan anlık görüntünün numarasını yaz."
+
+#, fuzzy
+msgid "Print version and exit."
+msgstr "\t--version\t\t\tSürümü yazdır ve çık."
+
 # include/ui/common_messages.ycp:95
 #, fuzzy, c-format
 msgid "Quota error (%s)."
 msgstr "Giriş/Çıkış hatası"
 
+#, fuzzy
+msgid "Read files for which to undo changes from file."
+msgstr "\t--giriş, -i <file>\t\tDosyadan değişiklikleri geri almak için dosyaları oku."
+
+#, fuzzy
+msgid "Read files to diff from file."
+msgstr "\t--giriş, -i <file>\t\tDosyadan değişiklikleri geri almak için dosyaları oku."
+
 msgid "Read-Only"
 msgstr ""
+
+msgid "Run command and create pre and post snapshots."
+msgstr ""
+
+#, fuzzy
+msgid "Save status to file."
+msgstr "\t--output, -o <file>\t\tDurumu dosyaya kaydet."
 
 #, fuzzy
 msgid "See 'man snapper' for further instructions."
@@ -848,6 +934,31 @@ msgstr "Daha fazla bilgi için 'Yakalayıcı yardımı'nı okumayı deneyin."
 #, fuzzy, c-format
 msgid "Server-side plugin '%s' failed."
 msgstr "'%s ' dosyasını açma başarısız oldu."
+
+msgid "Set CSV output format."
+msgstr ""
+
+msgid "Set JSON output format."
+msgstr ""
+
+#, fuzzy
+msgid "Set a machine-readable output format (csv, json)."
+msgstr "%d geçersiz tablo stili."
+
+#, fuzzy
+msgid "Set name of config to use."
+msgstr "\t--config, -c <name>\t\tKullanmak için yapılandırma ismini ayarla."
+
+msgid "Set snapshot as default snapshot."
+msgstr ""
+
+#, fuzzy
+msgid "Set snapshot read-only."
+msgstr "Yapılandırma oluşturma başarısız oldu (%s)."
+
+#, fuzzy
+msgid "Set snapshot read-write."
+msgstr "Yapılandırma oluşturma başarısız oldu (%s)."
 
 #, c-format
 msgid "Setting default subvolume to snapshot %d."
@@ -864,6 +975,13 @@ msgstr "Anlık görüntü kullanımda."
 msgid "Subvolume"
 msgstr "Arkases"
 
+#, fuzzy
+msgid "Suppress normal output."
+msgstr "\t--quiet, -q\t\t\tNormal olan çıktıları gizle."
+
+msgid "Sync after deletion."
+msgstr ""
+
 #. TRANSLATORS: symbol for "tera" (best keep untranslated)
 msgid "T"
 msgstr "T"
@@ -871,6 +989,10 @@ msgstr "T"
 #. TRANSLATORS: symbol for "tera bytes" (best keep untranslated)
 msgid "TB"
 msgstr "TB"
+
+#, fuzzy
+msgid "Table style (integer)."
+msgstr "\t--table-style, -t <style>\tTablo stili (tamsayı)."
 
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr ""
@@ -889,8 +1011,22 @@ msgstr "TiB"
 msgid "Try 'snapper --help' for more information."
 msgstr "Daha fazla bilgi için 'Yakalayıcı yardımı'nı okumayı deneyin."
 
+msgid "Try to make space available."
+msgstr ""
+
+msgid "Turn on debugging."
+msgstr ""
+
 msgid "Type"
 msgstr "Tür"
+
+#, fuzzy
+msgid "Type for snapshot."
+msgstr "Bilinmeyen anlık görüntü formatı."
+
+#, fuzzy
+msgid "Type of snapshots to list."
+msgstr "\t--tip, -t <type>\t\tListelemek için anlım görüntü tipleri."
 
 #, c-format
 msgid "Unknown cleanup algorithm '%s'."
@@ -943,6 +1079,14 @@ msgstr ""
 #, c-format
 msgid "Userdata '%s' has empty key."
 msgstr ""
+
+#, fuzzy
+msgid "Userdata for snapshot."
+msgstr "\t--kullanıcıverisi, -u <userdata>\tAnlık görüntü için kullanıcı verisi."
+
+#, fuzzy
+msgid "Userdata for snapshots."
+msgstr "Özdeş anlık görüntüler."
 
 msgid "Value"
 msgstr "Değer"
@@ -1002,10 +1146,6 @@ msgid "yes"
 msgstr "evet"
 
 #, fuzzy
-#~ msgid "Unknown type of snapshot."
-#~ msgstr "Bilinmeyen anlık görüntü formatı."
-
-#, fuzzy
 #~ msgid "Unknown type of snapshots."
 #~ msgstr "Bilinmeyen anlık görüntü formatı."
 
@@ -1029,9 +1169,6 @@ msgstr "evet"
 #~| msgid "Try 'snapper help' for more information."
 #~ msgid "Command failed (%s). See log for more information."
 #~ msgstr "Daha fazla bilgi için 'Yakalayıcı yardımı'nı okumayı deneyin."
-
-#~ msgid "comparing snapshots..."
-#~ msgstr "Anlık görüntüler karşılaştırılıyor..."
 
 #~ msgid "done"
 #~ msgstr "yapılmış"
