--- a/po/zu.po
+++ b/po/zu.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: installation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-28 08:50+0100\n"
+"POT-Creation-Date: 2024-02-26 12:27+0100\n"
 "PO-Revision-Date: 2016-04-19 09:51+0000\n"
 "Last-Translator: Shane Wims <shane.wims@microfocus.com>\n"
 "Language-Team: Zulu <http://l10n.opensuse.org/projects/snapper/master/zu/>\n"
@@ -15,161 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 2.5\n"
-
-msgid "\t--abbreviate\t\t\tAllow to abbreviate table columns."
-msgstr ""
-
-#, fuzzy
-msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
-msgstr "\t-- all-configs, -a\t\tList snapshots from accessible configs."
-
-msgid "\t--ambit, -a ambit\t\tOperate in the specified ambit."
-msgstr ""
-
-msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshot."
-msgstr ""
-
-msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
-msgstr ""
-
-msgid ""
-"\t--columns <columns>\t\tColumns to show separated by comma.\n"
-"\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
-"\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
-"\t\t\t\t\tpre-number, post-number, post-date, read-only."
-msgstr ""
-
-msgid ""
-"\t--columns <columns>\t\tColumns to show separated by comma.\n"
-"\t\t\t\t\tPossible columns: key, value.\n"
-"\t\t\t\t\tColumns are not selected when JSON format is used."
-msgstr ""
-
-msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
-msgstr ""
-
-msgid "\t--config, -c <name>\t\tSet name of config to use."
-msgstr ""
-
-msgid "\t--csvout\t\t\tSet CSV output format."
-msgstr ""
-
-msgid "\t--debug\t\t\t\tTurn on debugging."
-msgstr ""
-
-msgid "\t--default\t\t\tSet snapshot as default snapshot."
-msgstr ""
-
-msgid "\t--description, -d <description>\tDescription for snapshot."
-msgstr ""
-
-msgid "\t--description, -d <description>\tDescription for snapshots."
-msgstr ""
-
-msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
-msgstr ""
-
-msgid "\t--disable-used-space\t\tDisable showing used space."
-msgstr ""
-
-msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
-msgstr ""
-
-msgid "\t--free-space <space>\t\tTry to make space available."
-msgstr ""
-
-msgid "\t--from <number>\t\t\tCreate a snapshot from the specified snapshot."
-msgstr ""
-
-msgid "\t--fstype, -f <fstype>\t\tManually set filesystem type."
-msgstr ""
-
-msgid "\t--input, -i <file>\t\tRead files for which to undo changes from file."
-msgstr ""
-
-msgid "\t--input, -i <file>\t\tRead files to diff from file."
-msgstr ""
-
-msgid "\t--iso\t\t\t\tDisplay dates and times in ISO format."
-msgstr ""
-
-msgid "\t--jsonout\t\t\tSet JSON output format."
-msgstr ""
-
-msgid "\t--machine-readable <format>\tSet a machine-readable output format (csv, json)."
-msgstr ""
-
-msgid "\t--no-dbus\t\t\tOperate without DBus."
-msgstr ""
-
-msgid "\t--no-headers\t\t\tNo headers for CSV output format."
-msgstr ""
-
-msgid "\t--output, -o <file>\t\tSave status to file."
-msgstr ""
-
-msgid "\t--path <path>\t\t\tCleanup all configs affecting path."
-msgstr ""
-
-msgid "\t--pre-number <number>\t\tNumber of corresponding pre snapshot."
-msgstr ""
-
-msgid "\t--print-number, -p\t\tPrint number of created snapshot."
-msgstr ""
-
-msgid "\t--print-number, -p\t\tPrint number of second created snapshot."
-msgstr ""
-
-msgid "\t--quiet, -q\t\t\tSuppress normal output."
-msgstr ""
-
-msgid "\t--read-only\t\t\tCreate read-only snapshot."
-msgstr ""
-
-msgid "\t--read-only\t\t\tSet snapshot read-only."
-msgstr ""
-
-msgid "\t--read-write\t\t\tCreate read-write snapshot."
-msgstr ""
-
-msgid "\t--read-write\t\t\tSet snapshot read-write."
-msgstr ""
-
-msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
-msgstr ""
-
-msgid "\t--separator <separator>\t\tCharacter separator for CSV output format."
-msgstr ""
-
-msgid "\t--sync, -s\t\t\tSync after deletion."
-msgstr ""
-
-msgid "\t--table-style, -t <style>\tTable style (integer)."
-msgstr ""
-
-msgid "\t--template, -t <name>\t\tName of config template to use."
-msgstr ""
-
-msgid "\t--type, -t <type>\t\tType for snapshot."
-msgstr ""
-
-msgid "\t--type, -t <type>\t\tType of snapshots to list."
-msgstr ""
-
-msgid "\t--userdata, -u <userdata>\tUserdata for snapshot."
-msgstr ""
-
-msgid "\t--userdata, -u <userdata>\tUserdata for snapshots."
-msgstr ""
-
-msgid "\t--utc\t\t\t\tDisplay dates and times in UTC."
-msgstr ""
-
-msgid "\t--verbose, -v\t\t\tIncrease verbosity."
-msgstr ""
-
-msgid "\t--version\t\t\tPrint version and exit."
-msgstr ""
 
 msgid "\tsnapper cleanup <cleanup-algorithm>"
 msgstr ""
@@ -250,10 +95,7 @@ msgstr ""
 msgid "    Options for 'list' command:"
 msgstr ""
 
-msgid ""
-"    Options for 'list-configs' command:\n"
-"\t--columns <columns>\t\tColumns to show separated by comma.\n"
-"\t\t\t\t\tPossible columns: config, subvolume.\n"
+msgid "    Options for 'list-configs' command:"
 msgstr ""
 
 msgid "    Options for 'modify' command:"
@@ -343,6 +185,127 @@ msgstr ""
 msgid "(Snapshot %d.)"
 msgstr "Isiphakeli %s asizange sitholakale."
 
+msgid "--abbreviate"
+msgstr ""
+
+msgid "--all-configs, -a"
+msgstr ""
+
+msgid "--ambit, -a <ambit>"
+msgstr ""
+
+msgid "--cleanup-algorithm, -c <algo>"
+msgstr ""
+
+msgid "--columns <columns>"
+msgstr ""
+
+msgid "--command <command>"
+msgstr ""
+
+msgid "--config, -c <name>"
+msgstr ""
+
+msgid "--csvout"
+msgstr ""
+
+msgid "--debug"
+msgstr ""
+
+msgid "--default"
+msgstr ""
+
+msgid "--description, -d <description>"
+msgstr ""
+
+msgid "--diff-cmd <command>"
+msgstr ""
+
+msgid "--disable-used-space"
+msgstr ""
+
+msgid "--extensions, -x <options>"
+msgstr ""
+
+msgid "--free-space <space>"
+msgstr ""
+
+msgid "--from <number>"
+msgstr ""
+
+msgid "--fstype, -f <fstype>"
+msgstr ""
+
+msgid "--input, -i <file>"
+msgstr ""
+
+msgid "--iso"
+msgstr ""
+
+msgid "--jsonout"
+msgstr ""
+
+#, fuzzy
+msgid "--machine-readable <format>"
+msgstr "Akunanjongo %1."
+
+msgid "--no-dbus"
+msgstr ""
+
+msgid "--no-headers"
+msgstr ""
+
+msgid "--output, -o <file>"
+msgstr ""
+
+msgid "--path <path>"
+msgstr ""
+
+msgid "--pre-number <number>"
+msgstr ""
+
+msgid "--print-number, -p"
+msgstr ""
+
+msgid "--quiet, -q"
+msgstr ""
+
+msgid "--read-only"
+msgstr ""
+
+msgid "--read-write"
+msgstr ""
+
+msgid "--root, -r <path>"
+msgstr ""
+
+msgid "--separator <separator>"
+msgstr ""
+
+msgid "--sync, -s"
+msgstr ""
+
+msgid "--table-style, -t <style>"
+msgstr ""
+
+msgid "--template, -t <name>"
+msgstr ""
+
+msgid "--type, -t <type>"
+msgstr ""
+
+msgid "--userdata, -u <userdata>"
+msgstr ""
+
+msgid "--utc"
+msgstr ""
+
+msgid "--verbose, -v"
+msgstr ""
+
+msgid "--version"
+msgstr ""
+
 #, fuzzy
 msgid "ACL error."
 msgstr "iphutha"
@@ -351,6 +314,9 @@ msgid "Active"
 msgstr ""
 
 msgid "Active snapshot is already default snapshot."
+msgstr ""
+
+msgid "Allow to abbreviate table columns."
 msgstr ""
 
 #, c-format
@@ -379,11 +345,28 @@ msgstr ""
 msgid "Cannot do rollback since default subvolume is unknown."
 msgstr ""
 
+msgid "Character separator for CSV output format."
+msgstr ""
+
 msgid "Cleanup"
+msgstr ""
+
+#, fuzzy
+msgid "Cleanup algorithm for snapshot."
+msgstr "Ulimi olungaziwa:"
+
+#, fuzzy
+msgid "Cleanup algorithm for snapshots."
+msgstr "Ulimi olungaziwa:"
+
+msgid "Cleanup all configs affecting path."
 msgstr ""
 
 #, c-format
 msgid "Client-side plugin '%s' failed."
+msgstr ""
+
+msgid "Columns to show separated by comma."
 msgstr ""
 
 #, fuzzy
@@ -474,6 +457,9 @@ msgstr "u-thola udinga okungenani i-argument eyodwa"
 msgid "Command 'xadiff' needs at least one argument."
 msgstr "u-thola udinga okungenani i-argument eyodwa"
 
+msgid "Command used for comparing files."
+msgstr ""
+
 #, fuzzy
 msgid "Config"
 msgstr "Idayalogi Yokuhlela"
@@ -508,6 +494,18 @@ msgstr ""
 
 msgid "Could not make enough free space available."
 msgstr ""
+
+#, fuzzy
+msgid "Create a snapshot from the specified snapshot."
+msgstr "Inqunta amafayela okuhlela..."
+
+#, fuzzy
+msgid "Create read-only snapshot."
+msgstr "Inqunta amafayela okuhlela..."
+
+#, fuzzy
+msgid "Create read-write snapshot."
+msgstr "Inqunta amafayela okuhlela..."
 
 #, fuzzy, c-format
 msgid "Creating config failed (%s)."
@@ -555,7 +553,23 @@ msgstr[1] "Ukususa i-CA kuhlulekile: %1."
 msgid "Description"
 msgstr "Incazelo"
 
+#, fuzzy
+msgid "Description for snapshot."
+msgstr "Incazelo"
+
+msgid "Description for snapshots."
+msgstr ""
+
 msgid "Detecting filesystem type failed."
+msgstr ""
+
+msgid "Disable showing used space."
+msgstr ""
+
+msgid "Display dates and times in ISO format."
+msgstr ""
+
+msgid "Display dates and times in UTC."
 msgstr ""
 
 #. TRANSLATORS: symbol for "exa" (best keep untranslated)
@@ -582,6 +596,9 @@ msgstr "Akunanjongo %1."
 #, fuzzy, c-format
 msgid "Error (%s)."
 msgstr "Iphutha le-I/O"
+
+msgid "Extra options passed to the diff command."
+msgstr ""
 
 msgid "Failed to initialize filesystem handler."
 msgstr ""
@@ -648,6 +665,9 @@ msgstr ""
 msgid "Illegal snapshot."
 msgstr "Akunanjongo %1."
 
+msgid "Increase verbosity."
+msgstr ""
+
 #, fuzzy, c-format
 msgid "Invalid ambit '%s'."
 msgstr "Akunanjongo %1."
@@ -655,6 +675,10 @@ msgstr "Akunanjongo %1."
 #, fuzzy, c-format
 msgid "Invalid column '%s'."
 msgstr "Akunanjongo %1."
+
+#, fuzzy
+msgid "Invalid config."
+msgstr "Ukwaziswa okukhishiwe okungekho emthethweni."
 
 #, fuzzy
 msgid "Invalid configdata."
@@ -705,6 +729,10 @@ msgstr "Kenya"
 msgid "KiB"
 msgstr ""
 
+#, fuzzy
+msgid "List snapshots from all accessible configs."
+msgstr "\t-- all-configs, -a\t\tList snapshots from accessible configs."
+
 #, fuzzy, c-format
 msgid "Listing configs failed (%s)."
 msgstr "Inqunta amafayela okuhlela..."
@@ -715,6 +743,9 @@ msgstr ""
 
 #. TRANSLATORS: symbol for "mega bytes" (best keep untranslated)
 msgid "MB"
+msgstr ""
+
+msgid "Manually set filesystem type."
 msgstr ""
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
@@ -742,16 +773,37 @@ msgstr ""
 msgid "Missing or invalid pre-number."
 msgstr ""
 
+msgid "Name"
+msgstr ""
+
+msgid "Name of config template to use."
+msgstr ""
+
 #, fuzzy
 msgid "No command provided."
 msgstr "Ayikho ikhomandi enikeziwe"
+
+msgid "No headers for CSV output format."
+msgstr ""
 
 #, fuzzy
 msgid "No permissions."
 msgstr "Izimvume zinqatshiwe"
 
+msgid "Number of corresponding pre snapshot."
+msgstr ""
+
 #, c-format
 msgid "Opening file '%s' failed."
+msgstr ""
+
+msgid "Operate in the specified ambit."
+msgstr ""
+
+msgid "Operate on target root (works only without DBus)."
+msgstr ""
+
+msgid "Operate without DBus."
 msgstr ""
 
 msgid "Option --from only supported for snapshots of type single."
@@ -788,12 +840,33 @@ msgstr ""
 msgid "Pre Date"
 msgstr "Ngemva kokuqala"
 
+msgid "Print number of created snapshot."
+msgstr ""
+
+msgid "Print number of second created snapshot."
+msgstr ""
+
+msgid "Print version and exit."
+msgstr ""
+
 # error box title
 #, fuzzy, c-format
 msgid "Quota error (%s)."
 msgstr "Iphutha le-I/O"
 
+msgid "Read files for which to undo changes from file."
+msgstr ""
+
+msgid "Read files to diff from file."
+msgstr ""
+
 msgid "Read-Only"
+msgstr ""
+
+msgid "Run command and create pre and post snapshots."
+msgstr ""
+
+msgid "Save status to file."
 msgstr ""
 
 #, fuzzy
@@ -803,6 +876,30 @@ msgstr "Zama `%s --usizo' noma `%s –ukusetshenziswa' kokwaziswa okwengeziwe.\n
 #, c-format
 msgid "Server-side plugin '%s' failed."
 msgstr ""
+
+msgid "Set CSV output format."
+msgstr ""
+
+msgid "Set JSON output format."
+msgstr ""
+
+#, fuzzy
+msgid "Set a machine-readable output format (csv, json)."
+msgstr "Akunanjongo %1."
+
+msgid "Set name of config to use."
+msgstr ""
+
+msgid "Set snapshot as default snapshot."
+msgstr ""
+
+#, fuzzy
+msgid "Set snapshot read-only."
+msgstr "Inqunta amafayela okuhlela..."
+
+#, fuzzy
+msgid "Set snapshot read-write."
+msgstr "Inqunta amafayela okuhlela..."
 
 #, c-format
 msgid "Setting default subvolume to snapshot %d."
@@ -819,12 +916,21 @@ msgstr "Isiphakeli %s asizange sitholakale."
 msgid "Subvolume"
 msgstr ""
 
+msgid "Suppress normal output."
+msgstr ""
+
+msgid "Sync after deletion."
+msgstr ""
+
 #. TRANSLATORS: symbol for "tera" (best keep untranslated)
 msgid "T"
 msgstr ""
 
 #. TRANSLATORS: symbol for "tera bytes" (best keep untranslated)
 msgid "TB"
+msgstr ""
+
+msgid "Table style (integer)."
 msgstr ""
 
 msgid "The ambit can be specified manually using the --ambit option."
@@ -844,8 +950,22 @@ msgstr ""
 msgid "Try 'snapper --help' for more information."
 msgstr "Zama `%s --usizo' noma `%s –ukusetshenziswa' kokwaziswa okwengeziwe.\n"
 
+msgid "Try to make space available."
+msgstr ""
+
+msgid "Turn on debugging."
+msgstr ""
+
 msgid "Type"
 msgstr "Uhlobo"
+
+#, fuzzy
+msgid "Type for snapshot."
+msgstr "Uhlobo olungaziwa."
+
+#, fuzzy
+msgid "Type of snapshots to list."
+msgstr "Uhlobo olungaziwa."
 
 #, fuzzy, c-format
 msgid "Unknown cleanup algorithm '%s'."
@@ -898,6 +1018,14 @@ msgstr ""
 #, c-format
 msgid "Userdata '%s' has empty key."
 msgstr ""
+
+#, fuzzy
+msgid "Userdata for snapshot."
+msgstr "Akunanjongo %1."
+
+#, fuzzy
+msgid "Userdata for snapshots."
+msgstr "Uhlobo olungaziwa."
 
 msgid "Value"
 msgstr "I-value"
@@ -954,14 +1082,6 @@ msgstr ""
 
 msgid "yes"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Unknown type of snapshot."
-#~ msgstr "Uhlobo olungaziwa."
-
-#, fuzzy
-#~ msgid "Unknown type of snapshots."
-#~ msgstr "Uhlobo olungaziwa."
 
 #, fuzzy
 #~ msgid "Quota failure (%s)."
